// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`places 365 > Darwin 1`] = `
[
  {
    "date": "2025-06-15T00:00:00.000Z",
    "value": 9.1,
  },
  {
    "date": "2025-06-16T00:00:00.000Z",
    "value": 9.12,
  },
  {
    "date": "2025-06-17T00:00:00.000Z",
    "value": 9.13,
  },
  {
    "date": "2025-06-18T00:00:00.000Z",
    "value": 9.15,
  },
  {
    "date": "2025-06-19T00:00:00.000Z",
    "value": 9.17,
  },
  {
    "date": "2025-06-20T00:00:00.000Z",
    "value": 9.18,
  },
  {
    "date": "2025-06-21T00:00:00.000Z",
    "value": 9.2,
  },
  {
    "date": "2025-06-22T00:00:00.000Z",
    "value": 9.21,
  },
  {
    "date": "2025-06-23T00:00:00.000Z",
    "value": 9.23,
  },
  {
    "date": "2025-06-24T00:00:00.000Z",
    "value": 9.25,
  },
  {
    "date": "2025-06-25T00:00:00.000Z",
    "value": 9.26,
  },
  {
    "date": "2025-06-26T00:00:00.000Z",
    "value": 9.28,
  },
  {
    "date": "2025-06-27T00:00:00.000Z",
    "value": 9.3,
  },
  {
    "date": "2025-06-28T00:00:00.000Z",
    "value": 9.31,
  },
  {
    "date": "2025-06-29T00:00:00.000Z",
    "value": 9.33,
  },
  {
    "date": "2025-06-30T00:00:00.000Z",
    "value": 9.35,
  },
  {
    "date": "2025-07-01T00:00:00.000Z",
    "value": 9.36,
  },
  {
    "date": "2025-07-02T00:00:00.000Z",
    "value": 9.38,
  },
  {
    "date": "2025-07-03T00:00:00.000Z",
    "value": 9.4,
  },
  {
    "date": "2025-07-04T00:00:00.000Z",
    "value": 9.41,
  },
  {
    "date": "2025-07-05T00:00:00.000Z",
    "value": 9.43,
  },
  {
    "date": "2025-07-06T00:00:00.000Z",
    "value": 9.44,
  },
  {
    "date": "2025-07-07T00:00:00.000Z",
    "value": 9.46,
  },
  {
    "date": "2025-07-08T00:00:00.000Z",
    "value": 9.48,
  },
  {
    "date": "2025-07-09T00:00:00.000Z",
    "value": 9.49,
  },
  {
    "date": "2025-07-10T00:00:00.000Z",
    "value": 9.51,
  },
  {
    "date": "2025-07-11T00:00:00.000Z",
    "value": 9.53,
  },
  {
    "date": "2025-07-12T00:00:00.000Z",
    "value": 9.54,
  },
  {
    "date": "2025-07-13T00:00:00.000Z",
    "value": 9.56,
  },
  {
    "date": "2025-07-14T00:00:00.000Z",
    "value": 9.58,
  },
  {
    "date": "2025-07-15T00:00:00.000Z",
    "value": 9.59,
  },
  {
    "date": "2025-07-16T00:00:00.000Z",
    "value": 9.63,
  },
  {
    "date": "2025-07-17T00:00:00.000Z",
    "value": 9.68,
  },
  {
    "date": "2025-07-18T00:00:00.000Z",
    "value": 9.74,
  },
  {
    "date": "2025-07-19T00:00:00.000Z",
    "value": 9.79,
  },
  {
    "date": "2025-07-20T00:00:00.000Z",
    "value": 9.85,
  },
  {
    "date": "2025-07-21T00:00:00.000Z",
    "value": 9.9,
  },
  {
    "date": "2025-07-22T00:00:00.000Z",
    "value": 9.95,
  },
  {
    "date": "2025-07-23T00:00:00.000Z",
    "value": 10.01,
  },
  {
    "date": "2025-07-24T00:00:00.000Z",
    "value": 10.06,
  },
  {
    "date": "2025-07-25T00:00:00.000Z",
    "value": 10.12,
  },
  {
    "date": "2025-07-26T00:00:00.000Z",
    "value": 10.17,
  },
  {
    "date": "2025-07-27T00:00:00.000Z",
    "value": 10.23,
  },
  {
    "date": "2025-07-28T00:00:00.000Z",
    "value": 10.28,
  },
  {
    "date": "2025-07-29T00:00:00.000Z",
    "value": 10.34,
  },
  {
    "date": "2025-07-30T00:00:00.000Z",
    "value": 10.39,
  },
  {
    "date": "2025-07-31T00:00:00.000Z",
    "value": 10.45,
  },
  {
    "date": "2025-08-01T00:00:00.000Z",
    "value": 10.5,
  },
  {
    "date": "2025-08-02T00:00:00.000Z",
    "value": 10.55,
  },
  {
    "date": "2025-08-03T00:00:00.000Z",
    "value": 10.61,
  },
  {
    "date": "2025-08-04T00:00:00.000Z",
    "value": 10.66,
  },
  {
    "date": "2025-08-05T00:00:00.000Z",
    "value": 10.72,
  },
  {
    "date": "2025-08-06T00:00:00.000Z",
    "value": 10.77,
  },
  {
    "date": "2025-08-07T00:00:00.000Z",
    "value": 10.83,
  },
  {
    "date": "2025-08-08T00:00:00.000Z",
    "value": 10.88,
  },
  {
    "date": "2025-08-09T00:00:00.000Z",
    "value": 10.94,
  },
  {
    "date": "2025-08-10T00:00:00.000Z",
    "value": 10.99,
  },
  {
    "date": "2025-08-11T00:00:00.000Z",
    "value": 11.04,
  },
  {
    "date": "2025-08-12T00:00:00.000Z",
    "value": 11.1,
  },
  {
    "date": "2025-08-13T00:00:00.000Z",
    "value": 11.15,
  },
  {
    "date": "2025-08-14T00:00:00.000Z",
    "value": 11.21,
  },
  {
    "date": "2025-08-15T00:00:00.000Z",
    "value": 11.26,
  },
  {
    "date": "2025-08-16T00:00:00.000Z",
    "value": 11.33,
  },
  {
    "date": "2025-08-17T00:00:00.000Z",
    "value": 11.4,
  },
  {
    "date": "2025-08-18T00:00:00.000Z",
    "value": 11.47,
  },
  {
    "date": "2025-08-19T00:00:00.000Z",
    "value": 11.54,
  },
  {
    "date": "2025-08-20T00:00:00.000Z",
    "value": 11.61,
  },
  {
    "date": "2025-08-21T00:00:00.000Z",
    "value": 11.68,
  },
  {
    "date": "2025-08-22T00:00:00.000Z",
    "value": 11.75,
  },
  {
    "date": "2025-08-23T00:00:00.000Z",
    "value": 11.82,
  },
  {
    "date": "2025-08-24T00:00:00.000Z",
    "value": 11.89,
  },
  {
    "date": "2025-08-25T00:00:00.000Z",
    "value": 11.96,
  },
  {
    "date": "2025-08-26T00:00:00.000Z",
    "value": 12.03,
  },
  {
    "date": "2025-08-27T00:00:00.000Z",
    "value": 12.1,
  },
  {
    "date": "2025-08-28T00:00:00.000Z",
    "value": 12.17,
  },
  {
    "date": "2025-08-29T00:00:00.000Z",
    "value": 12.24,
  },
  {
    "date": "2025-08-30T00:00:00.000Z",
    "value": 12.31,
  },
  {
    "date": "2025-08-31T00:00:00.000Z",
    "value": 12.38,
  },
  {
    "date": "2025-09-01T00:00:00.000Z",
    "value": 12.45,
  },
  {
    "date": "2025-09-02T00:00:00.000Z",
    "value": 12.52,
  },
  {
    "date": "2025-09-03T00:00:00.000Z",
    "value": 12.59,
  },
  {
    "date": "2025-09-04T00:00:00.000Z",
    "value": 12.66,
  },
  {
    "date": "2025-09-05T00:00:00.000Z",
    "value": 12.73,
  },
  {
    "date": "2025-09-06T00:00:00.000Z",
    "value": 12.8,
  },
  {
    "date": "2025-09-07T00:00:00.000Z",
    "value": 12.87,
  },
  {
    "date": "2025-09-08T00:00:00.000Z",
    "value": 12.94,
  },
  {
    "date": "2025-09-09T00:00:00.000Z",
    "value": 13.01,
  },
  {
    "date": "2025-09-10T00:00:00.000Z",
    "value": 13.08,
  },
  {
    "date": "2025-09-11T00:00:00.000Z",
    "value": 13.15,
  },
  {
    "date": "2025-09-12T00:00:00.000Z",
    "value": 13.22,
  },
  {
    "date": "2025-09-13T00:00:00.000Z",
    "value": 13.29,
  },
  {
    "date": "2025-09-14T00:00:00.000Z",
    "value": 13.36,
  },
  {
    "date": "2025-09-15T00:00:00.000Z",
    "value": 13.43,
  },
  {
    "date": "2025-09-16T00:00:00.000Z",
    "value": 13.46,
  },
  {
    "date": "2025-09-17T00:00:00.000Z",
    "value": 13.5,
  },
  {
    "date": "2025-09-18T00:00:00.000Z",
    "value": 13.53,
  },
  {
    "date": "2025-09-19T00:00:00.000Z",
    "value": 13.57,
  },
  {
    "date": "2025-09-20T00:00:00.000Z",
    "value": 13.6,
  },
  {
    "date": "2025-09-21T00:00:00.000Z",
    "value": 13.64,
  },
  {
    "date": "2025-09-22T00:00:00.000Z",
    "value": 13.67,
  },
  {
    "date": "2025-09-23T00:00:00.000Z",
    "value": 13.71,
  },
  {
    "date": "2025-09-24T00:00:00.000Z",
    "value": 13.74,
  },
  {
    "date": "2025-09-25T00:00:00.000Z",
    "value": 13.78,
  },
  {
    "date": "2025-09-26T00:00:00.000Z",
    "value": 13.81,
  },
  {
    "date": "2025-09-27T00:00:00.000Z",
    "value": 13.85,
  },
  {
    "date": "2025-09-28T00:00:00.000Z",
    "value": 13.88,
  },
  {
    "date": "2025-09-29T00:00:00.000Z",
    "value": 13.92,
  },
  {
    "date": "2025-09-30T00:00:00.000Z",
    "value": 13.95,
  },
  {
    "date": "2025-10-01T00:00:00.000Z",
    "value": 13.99,
  },
  {
    "date": "2025-10-02T00:00:00.000Z",
    "value": 14.02,
  },
  {
    "date": "2025-10-03T00:00:00.000Z",
    "value": 14.06,
  },
  {
    "date": "2025-10-04T00:00:00.000Z",
    "value": 14.09,
  },
  {
    "date": "2025-10-05T00:00:00.000Z",
    "value": 14.13,
  },
  {
    "date": "2025-10-06T00:00:00.000Z",
    "value": 14.16,
  },
  {
    "date": "2025-10-07T00:00:00.000Z",
    "value": 14.19,
  },
  {
    "date": "2025-10-08T00:00:00.000Z",
    "value": 14.23,
  },
  {
    "date": "2025-10-09T00:00:00.000Z",
    "value": 14.26,
  },
  {
    "date": "2025-10-10T00:00:00.000Z",
    "value": 14.3,
  },
  {
    "date": "2025-10-11T00:00:00.000Z",
    "value": 14.33,
  },
  {
    "date": "2025-10-12T00:00:00.000Z",
    "value": 14.37,
  },
  {
    "date": "2025-10-13T00:00:00.000Z",
    "value": 14.4,
  },
  {
    "date": "2025-10-14T00:00:00.000Z",
    "value": 14.44,
  },
  {
    "date": "2025-10-15T00:00:00.000Z",
    "value": 14.47,
  },
  {
    "date": "2025-10-16T00:00:00.000Z",
    "value": 14.49,
  },
  {
    "date": "2025-10-17T00:00:00.000Z",
    "value": 14.5,
  },
  {
    "date": "2025-10-18T00:00:00.000Z",
    "value": 14.51,
  },
  {
    "date": "2025-10-19T00:00:00.000Z",
    "value": 14.51,
  },
  {
    "date": "2025-10-20T00:00:00.000Z",
    "value": 14.52,
  },
  {
    "date": "2025-10-21T00:00:00.000Z",
    "value": 14.52,
  },
  {
    "date": "2025-10-22T00:00:00.000Z",
    "value": 14.53,
  },
  {
    "date": "2025-10-23T00:00:00.000Z",
    "value": 14.54,
  },
  {
    "date": "2025-10-24T00:00:00.000Z",
    "value": 14.54,
  },
  {
    "date": "2025-10-25T00:00:00.000Z",
    "value": 14.55,
  },
  {
    "date": "2025-10-26T00:00:00.000Z",
    "value": 14.56,
  },
  {
    "date": "2025-10-27T00:00:00.000Z",
    "value": 14.56,
  },
  {
    "date": "2025-10-28T00:00:00.000Z",
    "value": 14.57,
  },
  {
    "date": "2025-10-29T00:00:00.000Z",
    "value": 14.57,
  },
  {
    "date": "2025-10-30T00:00:00.000Z",
    "value": 14.58,
  },
  {
    "date": "2025-10-31T00:00:00.000Z",
    "value": 14.59,
  },
  {
    "date": "2025-11-01T00:00:00.000Z",
    "value": 14.59,
  },
  {
    "date": "2025-11-02T00:00:00.000Z",
    "value": 14.6,
  },
  {
    "date": "2025-11-03T00:00:00.000Z",
    "value": 14.61,
  },
  {
    "date": "2025-11-04T00:00:00.000Z",
    "value": 14.61,
  },
  {
    "date": "2025-11-05T00:00:00.000Z",
    "value": 14.62,
  },
  {
    "date": "2025-11-06T00:00:00.000Z",
    "value": 14.62,
  },
  {
    "date": "2025-11-07T00:00:00.000Z",
    "value": 14.63,
  },
  {
    "date": "2025-11-08T00:00:00.000Z",
    "value": 14.64,
  },
  {
    "date": "2025-11-09T00:00:00.000Z",
    "value": 14.64,
  },
  {
    "date": "2025-11-10T00:00:00.000Z",
    "value": 14.65,
  },
  {
    "date": "2025-11-11T00:00:00.000Z",
    "value": 14.66,
  },
  {
    "date": "2025-11-12T00:00:00.000Z",
    "value": 14.66,
  },
  {
    "date": "2025-11-13T00:00:00.000Z",
    "value": 14.67,
  },
  {
    "date": "2025-11-14T00:00:00.000Z",
    "value": 14.67,
  },
  {
    "date": "2025-11-15T00:00:00.000Z",
    "value": 14.68,
  },
  {
    "date": "2025-11-16T00:00:00.000Z",
    "value": 14.69,
  },
  {
    "date": "2025-11-17T00:00:00.000Z",
    "value": 14.7,
  },
  {
    "date": "2025-11-18T00:00:00.000Z",
    "value": 14.7,
  },
  {
    "date": "2025-11-19T00:00:00.000Z",
    "value": 14.71,
  },
  {
    "date": "2025-11-20T00:00:00.000Z",
    "value": 14.72,
  },
  {
    "date": "2025-11-21T00:00:00.000Z",
    "value": 14.73,
  },
  {
    "date": "2025-11-22T00:00:00.000Z",
    "value": 14.74,
  },
  {
    "date": "2025-11-23T00:00:00.000Z",
    "value": 14.75,
  },
  {
    "date": "2025-11-24T00:00:00.000Z",
    "value": 14.75,
  },
  {
    "date": "2025-11-25T00:00:00.000Z",
    "value": 14.76,
  },
  {
    "date": "2025-11-26T00:00:00.000Z",
    "value": 14.77,
  },
  {
    "date": "2025-11-27T00:00:00.000Z",
    "value": 14.78,
  },
  {
    "date": "2025-11-28T00:00:00.000Z",
    "value": 14.79,
  },
  {
    "date": "2025-11-29T00:00:00.000Z",
    "value": 14.79,
  },
  {
    "date": "2025-11-30T00:00:00.000Z",
    "value": 14.8,
  },
  {
    "date": "2025-12-01T00:00:00.000Z",
    "value": 14.81,
  },
  {
    "date": "2025-12-02T00:00:00.000Z",
    "value": 14.82,
  },
  {
    "date": "2025-12-03T00:00:00.000Z",
    "value": 14.83,
  },
  {
    "date": "2025-12-04T00:00:00.000Z",
    "value": 14.84,
  },
  {
    "date": "2025-12-05T00:00:00.000Z",
    "value": 14.84,
  },
  {
    "date": "2025-12-06T00:00:00.000Z",
    "value": 14.85,
  },
  {
    "date": "2025-12-07T00:00:00.000Z",
    "value": 14.86,
  },
  {
    "date": "2025-12-08T00:00:00.000Z",
    "value": 14.87,
  },
  {
    "date": "2025-12-09T00:00:00.000Z",
    "value": 14.88,
  },
  {
    "date": "2025-12-10T00:00:00.000Z",
    "value": 14.88,
  },
  {
    "date": "2025-12-11T00:00:00.000Z",
    "value": 14.89,
  },
  {
    "date": "2025-12-12T00:00:00.000Z",
    "value": 14.9,
  },
  {
    "date": "2025-12-13T00:00:00.000Z",
    "value": 14.91,
  },
  {
    "date": "2025-12-14T00:00:00.000Z",
    "value": 14.92,
  },
  {
    "date": "2025-12-15T00:00:00.000Z",
    "value": 14.93,
  },
  {
    "date": "2025-12-16T00:00:00.000Z",
    "value": 14.95,
  },
  {
    "date": "2025-12-17T00:00:00.000Z",
    "value": 14.98,
  },
  {
    "date": "2025-12-18T00:00:00.000Z",
    "value": 15.01,
  },
  {
    "date": "2025-12-19T00:00:00.000Z",
    "value": 15.04,
  },
  {
    "date": "2025-12-20T00:00:00.000Z",
    "value": 15.07,
  },
  {
    "date": "2025-12-21T00:00:00.000Z",
    "value": 15.1,
  },
  {
    "date": "2025-12-22T00:00:00.000Z",
    "value": 15.13,
  },
  {
    "date": "2025-12-23T00:00:00.000Z",
    "value": 15.16,
  },
  {
    "date": "2025-12-24T00:00:00.000Z",
    "value": 15.19,
  },
  {
    "date": "2025-12-25T00:00:00.000Z",
    "value": 15.22,
  },
  {
    "date": "2025-12-26T00:00:00.000Z",
    "value": 15.25,
  },
  {
    "date": "2025-12-27T00:00:00.000Z",
    "value": 15.28,
  },
  {
    "date": "2025-12-28T00:00:00.000Z",
    "value": 15.31,
  },
  {
    "date": "2025-12-29T00:00:00.000Z",
    "value": 15.34,
  },
  {
    "date": "2025-12-30T00:00:00.000Z",
    "value": 15.37,
  },
  {
    "date": "2025-12-31T00:00:00.000Z",
    "value": 15.4,
  },
  {
    "date": "2026-01-01T00:00:00.000Z",
    "value": 15.43,
  },
  {
    "date": "2026-01-02T00:00:00.000Z",
    "value": 15.46,
  },
  {
    "date": "2026-01-03T00:00:00.000Z",
    "value": 15.49,
  },
  {
    "date": "2026-01-04T00:00:00.000Z",
    "value": 15.52,
  },
  {
    "date": "2026-01-05T00:00:00.000Z",
    "value": 15.55,
  },
  {
    "date": "2026-01-06T00:00:00.000Z",
    "value": 15.58,
  },
  {
    "date": "2026-01-07T00:00:00.000Z",
    "value": 15.61,
  },
  {
    "date": "2026-01-08T00:00:00.000Z",
    "value": 15.64,
  },
  {
    "date": "2026-01-09T00:00:00.000Z",
    "value": 15.67,
  },
  {
    "date": "2026-01-10T00:00:00.000Z",
    "value": 15.7,
  },
  {
    "date": "2026-01-11T00:00:00.000Z",
    "value": 15.73,
  },
  {
    "date": "2026-01-12T00:00:00.000Z",
    "value": 15.76,
  },
  {
    "date": "2026-01-13T00:00:00.000Z",
    "value": 15.79,
  },
  {
    "date": "2026-01-14T00:00:00.000Z",
    "value": 15.82,
  },
  {
    "date": "2026-01-15T00:00:00.000Z",
    "value": 15.85,
  },
  {
    "date": "2026-01-16T00:00:00.000Z",
    "value": 15.87,
  },
  {
    "date": "2026-01-17T00:00:00.000Z",
    "value": 15.88,
  },
  {
    "date": "2026-01-18T00:00:00.000Z",
    "value": 15.88,
  },
  {
    "date": "2026-01-19T00:00:00.000Z",
    "value": 15.89,
  },
  {
    "date": "2026-01-20T00:00:00.000Z",
    "value": 15.89,
  },
  {
    "date": "2026-01-21T00:00:00.000Z",
    "value": 15.89,
  },
  {
    "date": "2026-01-22T00:00:00.000Z",
    "value": 15.9,
  },
  {
    "date": "2026-01-23T00:00:00.000Z",
    "value": 15.9,
  },
  {
    "date": "2026-01-24T00:00:00.000Z",
    "value": 15.91,
  },
  {
    "date": "2026-01-25T00:00:00.000Z",
    "value": 15.91,
  },
  {
    "date": "2026-01-26T00:00:00.000Z",
    "value": 15.92,
  },
  {
    "date": "2026-01-27T00:00:00.000Z",
    "value": 15.92,
  },
  {
    "date": "2026-01-28T00:00:00.000Z",
    "value": 15.93,
  },
  {
    "date": "2026-01-29T00:00:00.000Z",
    "value": 15.93,
  },
  {
    "date": "2026-01-30T00:00:00.000Z",
    "value": 15.93,
  },
  {
    "date": "2026-01-31T00:00:00.000Z",
    "value": 15.94,
  },
  {
    "date": "2026-02-01T00:00:00.000Z",
    "value": 15.94,
  },
  {
    "date": "2026-02-02T00:00:00.000Z",
    "value": 15.95,
  },
  {
    "date": "2026-02-03T00:00:00.000Z",
    "value": 15.95,
  },
  {
    "date": "2026-02-04T00:00:00.000Z",
    "value": 15.96,
  },
  {
    "date": "2026-02-05T00:00:00.000Z",
    "value": 15.96,
  },
  {
    "date": "2026-02-06T00:00:00.000Z",
    "value": 15.96,
  },
  {
    "date": "2026-02-07T00:00:00.000Z",
    "value": 15.97,
  },
  {
    "date": "2026-02-08T00:00:00.000Z",
    "value": 15.97,
  },
  {
    "date": "2026-02-09T00:00:00.000Z",
    "value": 15.98,
  },
  {
    "date": "2026-02-10T00:00:00.000Z",
    "value": 15.98,
  },
  {
    "date": "2026-02-11T00:00:00.000Z",
    "value": 15.99,
  },
  {
    "date": "2026-02-12T00:00:00.000Z",
    "value": 15.99,
  },
  {
    "date": "2026-02-13T00:00:00.000Z",
    "value": 16,
  },
  {
    "date": "2026-02-14T00:00:00.000Z",
    "value": 16,
  },
  {
    "date": "2026-02-15T00:00:00.000Z",
    "value": 15.97,
  },
  {
    "date": "2026-02-16T00:00:00.000Z",
    "value": 15.95,
  },
  {
    "date": "2026-02-17T00:00:00.000Z",
    "value": 15.92,
  },
  {
    "date": "2026-02-18T00:00:00.000Z",
    "value": 15.9,
  },
  {
    "date": "2026-02-19T00:00:00.000Z",
    "value": 15.87,
  },
  {
    "date": "2026-02-20T00:00:00.000Z",
    "value": 15.85,
  },
  {
    "date": "2026-02-21T00:00:00.000Z",
    "value": 15.82,
  },
  {
    "date": "2026-02-22T00:00:00.000Z",
    "value": 15.8,
  },
  {
    "date": "2026-02-23T00:00:00.000Z",
    "value": 15.77,
  },
  {
    "date": "2026-02-24T00:00:00.000Z",
    "value": 15.75,
  },
  {
    "date": "2026-02-25T00:00:00.000Z",
    "value": 15.72,
  },
  {
    "date": "2026-02-26T00:00:00.000Z",
    "value": 15.69,
  },
  {
    "date": "2026-02-27T00:00:00.000Z",
    "value": 15.67,
  },
  {
    "date": "2026-02-28T00:00:00.000Z",
    "value": 15.64,
  },
  {
    "date": "2026-03-01T00:00:00.000Z",
    "value": 15.62,
  },
  {
    "date": "2026-03-02T00:00:00.000Z",
    "value": 15.59,
  },
  {
    "date": "2026-03-03T00:00:00.000Z",
    "value": 15.57,
  },
  {
    "date": "2026-03-04T00:00:00.000Z",
    "value": 15.54,
  },
  {
    "date": "2026-03-05T00:00:00.000Z",
    "value": 15.52,
  },
  {
    "date": "2026-03-06T00:00:00.000Z",
    "value": 15.49,
  },
  {
    "date": "2026-03-07T00:00:00.000Z",
    "value": 15.47,
  },
  {
    "date": "2026-03-08T00:00:00.000Z",
    "value": 15.44,
  },
  {
    "date": "2026-03-09T00:00:00.000Z",
    "value": 15.42,
  },
  {
    "date": "2026-03-10T00:00:00.000Z",
    "value": 15.39,
  },
  {
    "date": "2026-03-11T00:00:00.000Z",
    "value": 15.36,
  },
  {
    "date": "2026-03-12T00:00:00.000Z",
    "value": 15.34,
  },
  {
    "date": "2026-03-13T00:00:00.000Z",
    "value": 15.31,
  },
  {
    "date": "2026-03-14T00:00:00.000Z",
    "value": 15.29,
  },
  {
    "date": "2026-03-15T00:00:00.000Z",
    "value": 15.26,
  },
  {
    "date": "2026-03-16T00:00:00.000Z",
    "value": 15.21,
  },
  {
    "date": "2026-03-17T00:00:00.000Z",
    "value": 15.13,
  },
  {
    "date": "2026-03-18T00:00:00.000Z",
    "value": 15.05,
  },
  {
    "date": "2026-03-19T00:00:00.000Z",
    "value": 14.97,
  },
  {
    "date": "2026-03-20T00:00:00.000Z",
    "value": 14.89,
  },
  {
    "date": "2026-03-21T00:00:00.000Z",
    "value": 14.81,
  },
  {
    "date": "2026-03-22T00:00:00.000Z",
    "value": 14.73,
  },
  {
    "date": "2026-03-23T00:00:00.000Z",
    "value": 14.65,
  },
  {
    "date": "2026-03-24T00:00:00.000Z",
    "value": 14.57,
  },
  {
    "date": "2026-03-25T00:00:00.000Z",
    "value": 14.49,
  },
  {
    "date": "2026-03-26T00:00:00.000Z",
    "value": 14.41,
  },
  {
    "date": "2026-03-27T00:00:00.000Z",
    "value": 14.33,
  },
  {
    "date": "2026-03-28T00:00:00.000Z",
    "value": 14.25,
  },
  {
    "date": "2026-03-29T00:00:00.000Z",
    "value": 14.17,
  },
  {
    "date": "2026-03-30T00:00:00.000Z",
    "value": 14.09,
  },
  {
    "date": "2026-03-31T00:00:00.000Z",
    "value": 14,
  },
  {
    "date": "2026-04-01T00:00:00.000Z",
    "value": 13.92,
  },
  {
    "date": "2026-04-02T00:00:00.000Z",
    "value": 13.84,
  },
  {
    "date": "2026-04-03T00:00:00.000Z",
    "value": 13.76,
  },
  {
    "date": "2026-04-04T00:00:00.000Z",
    "value": 13.68,
  },
  {
    "date": "2026-04-05T00:00:00.000Z",
    "value": 13.6,
  },
  {
    "date": "2026-04-06T00:00:00.000Z",
    "value": 13.52,
  },
  {
    "date": "2026-04-07T00:00:00.000Z",
    "value": 13.44,
  },
  {
    "date": "2026-04-08T00:00:00.000Z",
    "value": 13.36,
  },
  {
    "date": "2026-04-09T00:00:00.000Z",
    "value": 13.28,
  },
  {
    "date": "2026-04-10T00:00:00.000Z",
    "value": 13.2,
  },
  {
    "date": "2026-04-11T00:00:00.000Z",
    "value": 13.12,
  },
  {
    "date": "2026-04-12T00:00:00.000Z",
    "value": 13.04,
  },
  {
    "date": "2026-04-13T00:00:00.000Z",
    "value": 12.96,
  },
  {
    "date": "2026-04-14T00:00:00.000Z",
    "value": 12.88,
  },
  {
    "date": "2026-04-15T00:00:00.000Z",
    "value": 12.8,
  },
  {
    "date": "2026-04-16T00:00:00.000Z",
    "value": 12.72,
  },
  {
    "date": "2026-04-17T00:00:00.000Z",
    "value": 12.64,
  },
  {
    "date": "2026-04-18T00:00:00.000Z",
    "value": 12.55,
  },
  {
    "date": "2026-04-19T00:00:00.000Z",
    "value": 12.47,
  },
  {
    "date": "2026-04-20T00:00:00.000Z",
    "value": 12.39,
  },
  {
    "date": "2026-04-21T00:00:00.000Z",
    "value": 12.31,
  },
  {
    "date": "2026-04-22T00:00:00.000Z",
    "value": 12.22,
  },
  {
    "date": "2026-04-23T00:00:00.000Z",
    "value": 12.14,
  },
  {
    "date": "2026-04-24T00:00:00.000Z",
    "value": 12.06,
  },
  {
    "date": "2026-04-25T00:00:00.000Z",
    "value": 11.98,
  },
  {
    "date": "2026-04-26T00:00:00.000Z",
    "value": 11.89,
  },
  {
    "date": "2026-04-27T00:00:00.000Z",
    "value": 11.81,
  },
  {
    "date": "2026-04-28T00:00:00.000Z",
    "value": 11.73,
  },
  {
    "date": "2026-04-29T00:00:00.000Z",
    "value": 11.65,
  },
  {
    "date": "2026-04-30T00:00:00.000Z",
    "value": 11.57,
  },
  {
    "date": "2026-05-01T00:00:00.000Z",
    "value": 11.48,
  },
  {
    "date": "2026-05-02T00:00:00.000Z",
    "value": 11.4,
  },
  {
    "date": "2026-05-03T00:00:00.000Z",
    "value": 11.32,
  },
  {
    "date": "2026-05-04T00:00:00.000Z",
    "value": 11.24,
  },
  {
    "date": "2026-05-05T00:00:00.000Z",
    "value": 11.15,
  },
  {
    "date": "2026-05-06T00:00:00.000Z",
    "value": 11.07,
  },
  {
    "date": "2026-05-07T00:00:00.000Z",
    "value": 10.99,
  },
  {
    "date": "2026-05-08T00:00:00.000Z",
    "value": 10.91,
  },
  {
    "date": "2026-05-09T00:00:00.000Z",
    "value": 10.82,
  },
  {
    "date": "2026-05-10T00:00:00.000Z",
    "value": 10.74,
  },
  {
    "date": "2026-05-11T00:00:00.000Z",
    "value": 10.66,
  },
  {
    "date": "2026-05-12T00:00:00.000Z",
    "value": 10.58,
  },
  {
    "date": "2026-05-13T00:00:00.000Z",
    "value": 10.5,
  },
  {
    "date": "2026-05-14T00:00:00.000Z",
    "value": 10.41,
  },
  {
    "date": "2026-05-15T00:00:00.000Z",
    "value": 10.33,
  },
  {
    "date": "2026-05-16T00:00:00.000Z",
    "value": 10.27,
  },
  {
    "date": "2026-05-17T00:00:00.000Z",
    "value": 10.23,
  },
  {
    "date": "2026-05-18T00:00:00.000Z",
    "value": 10.19,
  },
  {
    "date": "2026-05-19T00:00:00.000Z",
    "value": 10.15,
  },
  {
    "date": "2026-05-20T00:00:00.000Z",
    "value": 10.11,
  },
  {
    "date": "2026-05-21T00:00:00.000Z",
    "value": 10.08,
  },
  {
    "date": "2026-05-22T00:00:00.000Z",
    "value": 10.04,
  },
  {
    "date": "2026-05-23T00:00:00.000Z",
    "value": 10,
  },
  {
    "date": "2026-05-24T00:00:00.000Z",
    "value": 9.96,
  },
  {
    "date": "2026-05-25T00:00:00.000Z",
    "value": 9.92,
  },
  {
    "date": "2026-05-26T00:00:00.000Z",
    "value": 9.88,
  },
  {
    "date": "2026-05-27T00:00:00.000Z",
    "value": 9.84,
  },
  {
    "date": "2026-05-28T00:00:00.000Z",
    "value": 9.8,
  },
  {
    "date": "2026-05-29T00:00:00.000Z",
    "value": 9.76,
  },
  {
    "date": "2026-05-30T00:00:00.000Z",
    "value": 9.72,
  },
  {
    "date": "2026-05-31T00:00:00.000Z",
    "value": 9.69,
  },
  {
    "date": "2026-06-01T00:00:00.000Z",
    "value": 9.65,
  },
  {
    "date": "2026-06-02T00:00:00.000Z",
    "value": 9.61,
  },
  {
    "date": "2026-06-03T00:00:00.000Z",
    "value": 9.57,
  },
  {
    "date": "2026-06-04T00:00:00.000Z",
    "value": 9.53,
  },
  {
    "date": "2026-06-05T00:00:00.000Z",
    "value": 9.49,
  },
  {
    "date": "2026-06-06T00:00:00.000Z",
    "value": 9.45,
  },
  {
    "date": "2026-06-07T00:00:00.000Z",
    "value": 9.41,
  },
  {
    "date": "2026-06-08T00:00:00.000Z",
    "value": 9.37,
  },
  {
    "date": "2026-06-09T00:00:00.000Z",
    "value": 9.33,
  },
  {
    "date": "2026-06-10T00:00:00.000Z",
    "value": 9.3,
  },
  {
    "date": "2026-06-11T00:00:00.000Z",
    "value": 9.26,
  },
  {
    "date": "2026-06-12T00:00:00.000Z",
    "value": 9.22,
  },
  {
    "date": "2026-06-13T00:00:00.000Z",
    "value": 9.18,
  },
  {
    "date": "2026-06-14T00:00:00.000Z",
    "value": 9.14,
  },
]
`;

exports[`places 365 > Kingston, Tasmania 1`] = `
[
  {
    "date": "2025-06-15T00:00:00.000Z",
    "value": 1.13,
  },
  {
    "date": "2025-06-16T00:00:00.000Z",
    "value": 1.13,
  },
  {
    "date": "2025-06-17T00:00:00.000Z",
    "value": 1.14,
  },
  {
    "date": "2025-06-18T00:00:00.000Z",
    "value": 1.14,
  },
  {
    "date": "2025-06-19T00:00:00.000Z",
    "value": 1.15,
  },
  {
    "date": "2025-06-20T00:00:00.000Z",
    "value": 1.15,
  },
  {
    "date": "2025-06-21T00:00:00.000Z",
    "value": 1.15,
  },
  {
    "date": "2025-06-22T00:00:00.000Z",
    "value": 1.16,
  },
  {
    "date": "2025-06-23T00:00:00.000Z",
    "value": 1.16,
  },
  {
    "date": "2025-06-24T00:00:00.000Z",
    "value": 1.17,
  },
  {
    "date": "2025-06-25T00:00:00.000Z",
    "value": 1.17,
  },
  {
    "date": "2025-06-26T00:00:00.000Z",
    "value": 1.17,
  },
  {
    "date": "2025-06-27T00:00:00.000Z",
    "value": 1.18,
  },
  {
    "date": "2025-06-28T00:00:00.000Z",
    "value": 1.18,
  },
  {
    "date": "2025-06-29T00:00:00.000Z",
    "value": 1.19,
  },
  {
    "date": "2025-06-30T00:00:00.000Z",
    "value": 1.19,
  },
  {
    "date": "2025-07-01T00:00:00.000Z",
    "value": 1.19,
  },
  {
    "date": "2025-07-02T00:00:00.000Z",
    "value": 1.2,
  },
  {
    "date": "2025-07-03T00:00:00.000Z",
    "value": 1.2,
  },
  {
    "date": "2025-07-04T00:00:00.000Z",
    "value": 1.2,
  },
  {
    "date": "2025-07-05T00:00:00.000Z",
    "value": 1.21,
  },
  {
    "date": "2025-07-06T00:00:00.000Z",
    "value": 1.21,
  },
  {
    "date": "2025-07-07T00:00:00.000Z",
    "value": 1.22,
  },
  {
    "date": "2025-07-08T00:00:00.000Z",
    "value": 1.22,
  },
  {
    "date": "2025-07-09T00:00:00.000Z",
    "value": 1.22,
  },
  {
    "date": "2025-07-10T00:00:00.000Z",
    "value": 1.23,
  },
  {
    "date": "2025-07-11T00:00:00.000Z",
    "value": 1.23,
  },
  {
    "date": "2025-07-12T00:00:00.000Z",
    "value": 1.24,
  },
  {
    "date": "2025-07-13T00:00:00.000Z",
    "value": 1.24,
  },
  {
    "date": "2025-07-14T00:00:00.000Z",
    "value": 1.24,
  },
  {
    "date": "2025-07-15T00:00:00.000Z",
    "value": 1.25,
  },
  {
    "date": "2025-07-16T00:00:00.000Z",
    "value": 1.27,
  },
  {
    "date": "2025-07-17T00:00:00.000Z",
    "value": 1.3,
  },
  {
    "date": "2025-07-18T00:00:00.000Z",
    "value": 1.33,
  },
  {
    "date": "2025-07-19T00:00:00.000Z",
    "value": 1.36,
  },
  {
    "date": "2025-07-20T00:00:00.000Z",
    "value": 1.39,
  },
  {
    "date": "2025-07-21T00:00:00.000Z",
    "value": 1.42,
  },
  {
    "date": "2025-07-22T00:00:00.000Z",
    "value": 1.45,
  },
  {
    "date": "2025-07-23T00:00:00.000Z",
    "value": 1.48,
  },
  {
    "date": "2025-07-24T00:00:00.000Z",
    "value": 1.51,
  },
  {
    "date": "2025-07-25T00:00:00.000Z",
    "value": 1.54,
  },
  {
    "date": "2025-07-26T00:00:00.000Z",
    "value": 1.57,
  },
  {
    "date": "2025-07-27T00:00:00.000Z",
    "value": 1.6,
  },
  {
    "date": "2025-07-28T00:00:00.000Z",
    "value": 1.63,
  },
  {
    "date": "2025-07-29T00:00:00.000Z",
    "value": 1.66,
  },
  {
    "date": "2025-07-30T00:00:00.000Z",
    "value": 1.69,
  },
  {
    "date": "2025-07-31T00:00:00.000Z",
    "value": 1.73,
  },
  {
    "date": "2025-08-01T00:00:00.000Z",
    "value": 1.76,
  },
  {
    "date": "2025-08-02T00:00:00.000Z",
    "value": 1.79,
  },
  {
    "date": "2025-08-03T00:00:00.000Z",
    "value": 1.82,
  },
  {
    "date": "2025-08-04T00:00:00.000Z",
    "value": 1.85,
  },
  {
    "date": "2025-08-05T00:00:00.000Z",
    "value": 1.88,
  },
  {
    "date": "2025-08-06T00:00:00.000Z",
    "value": 1.91,
  },
  {
    "date": "2025-08-07T00:00:00.000Z",
    "value": 1.94,
  },
  {
    "date": "2025-08-08T00:00:00.000Z",
    "value": 1.97,
  },
  {
    "date": "2025-08-09T00:00:00.000Z",
    "value": 2,
  },
  {
    "date": "2025-08-10T00:00:00.000Z",
    "value": 2.03,
  },
  {
    "date": "2025-08-11T00:00:00.000Z",
    "value": 2.06,
  },
  {
    "date": "2025-08-12T00:00:00.000Z",
    "value": 2.09,
  },
  {
    "date": "2025-08-13T00:00:00.000Z",
    "value": 2.12,
  },
  {
    "date": "2025-08-14T00:00:00.000Z",
    "value": 2.15,
  },
  {
    "date": "2025-08-15T00:00:00.000Z",
    "value": 2.18,
  },
  {
    "date": "2025-08-16T00:00:00.000Z",
    "value": 2.23,
  },
  {
    "date": "2025-08-17T00:00:00.000Z",
    "value": 2.3,
  },
  {
    "date": "2025-08-18T00:00:00.000Z",
    "value": 2.36,
  },
  {
    "date": "2025-08-19T00:00:00.000Z",
    "value": 2.42,
  },
  {
    "date": "2025-08-20T00:00:00.000Z",
    "value": 2.49,
  },
  {
    "date": "2025-08-21T00:00:00.000Z",
    "value": 2.55,
  },
  {
    "date": "2025-08-22T00:00:00.000Z",
    "value": 2.61,
  },
  {
    "date": "2025-08-23T00:00:00.000Z",
    "value": 2.68,
  },
  {
    "date": "2025-08-24T00:00:00.000Z",
    "value": 2.74,
  },
  {
    "date": "2025-08-25T00:00:00.000Z",
    "value": 2.8,
  },
  {
    "date": "2025-08-26T00:00:00.000Z",
    "value": 2.87,
  },
  {
    "date": "2025-08-27T00:00:00.000Z",
    "value": 2.93,
  },
  {
    "date": "2025-08-28T00:00:00.000Z",
    "value": 3,
  },
  {
    "date": "2025-08-29T00:00:00.000Z",
    "value": 3.06,
  },
  {
    "date": "2025-08-30T00:00:00.000Z",
    "value": 3.12,
  },
  {
    "date": "2025-08-31T00:00:00.000Z",
    "value": 3.19,
  },
  {
    "date": "2025-09-01T00:00:00.000Z",
    "value": 3.25,
  },
  {
    "date": "2025-09-02T00:00:00.000Z",
    "value": 3.31,
  },
  {
    "date": "2025-09-03T00:00:00.000Z",
    "value": 3.38,
  },
  {
    "date": "2025-09-04T00:00:00.000Z",
    "value": 3.44,
  },
  {
    "date": "2025-09-05T00:00:00.000Z",
    "value": 3.5,
  },
  {
    "date": "2025-09-06T00:00:00.000Z",
    "value": 3.57,
  },
  {
    "date": "2025-09-07T00:00:00.000Z",
    "value": 3.63,
  },
  {
    "date": "2025-09-08T00:00:00.000Z",
    "value": 3.69,
  },
  {
    "date": "2025-09-09T00:00:00.000Z",
    "value": 3.76,
  },
  {
    "date": "2025-09-10T00:00:00.000Z",
    "value": 3.82,
  },
  {
    "date": "2025-09-11T00:00:00.000Z",
    "value": 3.89,
  },
  {
    "date": "2025-09-12T00:00:00.000Z",
    "value": 3.95,
  },
  {
    "date": "2025-09-13T00:00:00.000Z",
    "value": 4.01,
  },
  {
    "date": "2025-09-14T00:00:00.000Z",
    "value": 4.08,
  },
  {
    "date": "2025-09-15T00:00:00.000Z",
    "value": 4.14,
  },
  {
    "date": "2025-09-16T00:00:00.000Z",
    "value": 4.22,
  },
  {
    "date": "2025-09-17T00:00:00.000Z",
    "value": 4.31,
  },
  {
    "date": "2025-09-18T00:00:00.000Z",
    "value": 4.39,
  },
  {
    "date": "2025-09-19T00:00:00.000Z",
    "value": 4.48,
  },
  {
    "date": "2025-09-20T00:00:00.000Z",
    "value": 4.56,
  },
  {
    "date": "2025-09-21T00:00:00.000Z",
    "value": 4.65,
  },
  {
    "date": "2025-09-22T00:00:00.000Z",
    "value": 4.73,
  },
  {
    "date": "2025-09-23T00:00:00.000Z",
    "value": 4.81,
  },
  {
    "date": "2025-09-24T00:00:00.000Z",
    "value": 4.9,
  },
  {
    "date": "2025-09-25T00:00:00.000Z",
    "value": 4.98,
  },
  {
    "date": "2025-09-26T00:00:00.000Z",
    "value": 5.07,
  },
  {
    "date": "2025-09-27T00:00:00.000Z",
    "value": 5.15,
  },
  {
    "date": "2025-09-28T00:00:00.000Z",
    "value": 5.24,
  },
  {
    "date": "2025-09-29T00:00:00.000Z",
    "value": 5.32,
  },
  {
    "date": "2025-09-30T00:00:00.000Z",
    "value": 5.4,
  },
  {
    "date": "2025-10-01T00:00:00.000Z",
    "value": 5.49,
  },
  {
    "date": "2025-10-02T00:00:00.000Z",
    "value": 5.57,
  },
  {
    "date": "2025-10-03T00:00:00.000Z",
    "value": 5.66,
  },
  {
    "date": "2025-10-04T00:00:00.000Z",
    "value": 5.74,
  },
  {
    "date": "2025-10-05T00:00:00.000Z",
    "value": 5.83,
  },
  {
    "date": "2025-10-06T00:00:00.000Z",
    "value": 5.91,
  },
  {
    "date": "2025-10-07T00:00:00.000Z",
    "value": 5.99,
  },
  {
    "date": "2025-10-08T00:00:00.000Z",
    "value": 6.08,
  },
  {
    "date": "2025-10-09T00:00:00.000Z",
    "value": 6.16,
  },
  {
    "date": "2025-10-10T00:00:00.000Z",
    "value": 6.25,
  },
  {
    "date": "2025-10-11T00:00:00.000Z",
    "value": 6.33,
  },
  {
    "date": "2025-10-12T00:00:00.000Z",
    "value": 6.42,
  },
  {
    "date": "2025-10-13T00:00:00.000Z",
    "value": 6.5,
  },
  {
    "date": "2025-10-14T00:00:00.000Z",
    "value": 6.58,
  },
  {
    "date": "2025-10-15T00:00:00.000Z",
    "value": 6.67,
  },
  {
    "date": "2025-10-16T00:00:00.000Z",
    "value": 6.75,
  },
  {
    "date": "2025-10-17T00:00:00.000Z",
    "value": 6.83,
  },
  {
    "date": "2025-10-18T00:00:00.000Z",
    "value": 6.91,
  },
  {
    "date": "2025-10-19T00:00:00.000Z",
    "value": 6.98,
  },
  {
    "date": "2025-10-20T00:00:00.000Z",
    "value": 7.06,
  },
  {
    "date": "2025-10-21T00:00:00.000Z",
    "value": 7.14,
  },
  {
    "date": "2025-10-22T00:00:00.000Z",
    "value": 7.22,
  },
  {
    "date": "2025-10-23T00:00:00.000Z",
    "value": 7.3,
  },
  {
    "date": "2025-10-24T00:00:00.000Z",
    "value": 7.38,
  },
  {
    "date": "2025-10-25T00:00:00.000Z",
    "value": 7.45,
  },
  {
    "date": "2025-10-26T00:00:00.000Z",
    "value": 7.53,
  },
  {
    "date": "2025-10-27T00:00:00.000Z",
    "value": 7.61,
  },
  {
    "date": "2025-10-28T00:00:00.000Z",
    "value": 7.69,
  },
  {
    "date": "2025-10-29T00:00:00.000Z",
    "value": 7.77,
  },
  {
    "date": "2025-10-30T00:00:00.000Z",
    "value": 7.85,
  },
  {
    "date": "2025-10-31T00:00:00.000Z",
    "value": 7.92,
  },
  {
    "date": "2025-11-01T00:00:00.000Z",
    "value": 8,
  },
  {
    "date": "2025-11-02T00:00:00.000Z",
    "value": 8.08,
  },
  {
    "date": "2025-11-03T00:00:00.000Z",
    "value": 8.16,
  },
  {
    "date": "2025-11-04T00:00:00.000Z",
    "value": 8.24,
  },
  {
    "date": "2025-11-05T00:00:00.000Z",
    "value": 8.32,
  },
  {
    "date": "2025-11-06T00:00:00.000Z",
    "value": 8.39,
  },
  {
    "date": "2025-11-07T00:00:00.000Z",
    "value": 8.47,
  },
  {
    "date": "2025-11-08T00:00:00.000Z",
    "value": 8.55,
  },
  {
    "date": "2025-11-09T00:00:00.000Z",
    "value": 8.63,
  },
  {
    "date": "2025-11-10T00:00:00.000Z",
    "value": 8.71,
  },
  {
    "date": "2025-11-11T00:00:00.000Z",
    "value": 8.79,
  },
  {
    "date": "2025-11-12T00:00:00.000Z",
    "value": 8.86,
  },
  {
    "date": "2025-11-13T00:00:00.000Z",
    "value": 8.94,
  },
  {
    "date": "2025-11-14T00:00:00.000Z",
    "value": 9.02,
  },
  {
    "date": "2025-11-15T00:00:00.000Z",
    "value": 9.1,
  },
  {
    "date": "2025-11-16T00:00:00.000Z",
    "value": 9.17,
  },
  {
    "date": "2025-11-17T00:00:00.000Z",
    "value": 9.24,
  },
  {
    "date": "2025-11-18T00:00:00.000Z",
    "value": 9.31,
  },
  {
    "date": "2025-11-19T00:00:00.000Z",
    "value": 9.38,
  },
  {
    "date": "2025-11-20T00:00:00.000Z",
    "value": 9.45,
  },
  {
    "date": "2025-11-21T00:00:00.000Z",
    "value": 9.52,
  },
  {
    "date": "2025-11-22T00:00:00.000Z",
    "value": 9.59,
  },
  {
    "date": "2025-11-23T00:00:00.000Z",
    "value": 9.66,
  },
  {
    "date": "2025-11-24T00:00:00.000Z",
    "value": 9.73,
  },
  {
    "date": "2025-11-25T00:00:00.000Z",
    "value": 9.8,
  },
  {
    "date": "2025-11-26T00:00:00.000Z",
    "value": 9.87,
  },
  {
    "date": "2025-11-27T00:00:00.000Z",
    "value": 9.94,
  },
  {
    "date": "2025-11-28T00:00:00.000Z",
    "value": 10.01,
  },
  {
    "date": "2025-11-29T00:00:00.000Z",
    "value": 10.08,
  },
  {
    "date": "2025-11-30T00:00:00.000Z",
    "value": 10.15,
  },
  {
    "date": "2025-12-01T00:00:00.000Z",
    "value": 10.22,
  },
  {
    "date": "2025-12-02T00:00:00.000Z",
    "value": 10.29,
  },
  {
    "date": "2025-12-03T00:00:00.000Z",
    "value": 10.36,
  },
  {
    "date": "2025-12-04T00:00:00.000Z",
    "value": 10.43,
  },
  {
    "date": "2025-12-05T00:00:00.000Z",
    "value": 10.5,
  },
  {
    "date": "2025-12-06T00:00:00.000Z",
    "value": 10.57,
  },
  {
    "date": "2025-12-07T00:00:00.000Z",
    "value": 10.64,
  },
  {
    "date": "2025-12-08T00:00:00.000Z",
    "value": 10.71,
  },
  {
    "date": "2025-12-09T00:00:00.000Z",
    "value": 10.78,
  },
  {
    "date": "2025-12-10T00:00:00.000Z",
    "value": 10.85,
  },
  {
    "date": "2025-12-11T00:00:00.000Z",
    "value": 10.92,
  },
  {
    "date": "2025-12-12T00:00:00.000Z",
    "value": 10.99,
  },
  {
    "date": "2025-12-13T00:00:00.000Z",
    "value": 11.06,
  },
  {
    "date": "2025-12-14T00:00:00.000Z",
    "value": 11.13,
  },
  {
    "date": "2025-12-15T00:00:00.000Z",
    "value": 11.2,
  },
  {
    "date": "2025-12-16T00:00:00.000Z",
    "value": 11.24,
  },
  {
    "date": "2025-12-17T00:00:00.000Z",
    "value": 11.25,
  },
  {
    "date": "2025-12-18T00:00:00.000Z",
    "value": 11.27,
  },
  {
    "date": "2025-12-19T00:00:00.000Z",
    "value": 11.28,
  },
  {
    "date": "2025-12-20T00:00:00.000Z",
    "value": 11.29,
  },
  {
    "date": "2025-12-21T00:00:00.000Z",
    "value": 11.31,
  },
  {
    "date": "2025-12-22T00:00:00.000Z",
    "value": 11.32,
  },
  {
    "date": "2025-12-23T00:00:00.000Z",
    "value": 11.34,
  },
  {
    "date": "2025-12-24T00:00:00.000Z",
    "value": 11.35,
  },
  {
    "date": "2025-12-25T00:00:00.000Z",
    "value": 11.36,
  },
  {
    "date": "2025-12-26T00:00:00.000Z",
    "value": 11.38,
  },
  {
    "date": "2025-12-27T00:00:00.000Z",
    "value": 11.39,
  },
  {
    "date": "2025-12-28T00:00:00.000Z",
    "value": 11.41,
  },
  {
    "date": "2025-12-29T00:00:00.000Z",
    "value": 11.42,
  },
  {
    "date": "2025-12-30T00:00:00.000Z",
    "value": 11.44,
  },
  {
    "date": "2025-12-31T00:00:00.000Z",
    "value": 11.45,
  },
  {
    "date": "2026-01-01T00:00:00.000Z",
    "value": 11.46,
  },
  {
    "date": "2026-01-02T00:00:00.000Z",
    "value": 11.48,
  },
  {
    "date": "2026-01-03T00:00:00.000Z",
    "value": 11.49,
  },
  {
    "date": "2026-01-04T00:00:00.000Z",
    "value": 11.51,
  },
  {
    "date": "2026-01-05T00:00:00.000Z",
    "value": 11.52,
  },
  {
    "date": "2026-01-06T00:00:00.000Z",
    "value": 11.54,
  },
  {
    "date": "2026-01-07T00:00:00.000Z",
    "value": 11.55,
  },
  {
    "date": "2026-01-08T00:00:00.000Z",
    "value": 11.56,
  },
  {
    "date": "2026-01-09T00:00:00.000Z",
    "value": 11.58,
  },
  {
    "date": "2026-01-10T00:00:00.000Z",
    "value": 11.59,
  },
  {
    "date": "2026-01-11T00:00:00.000Z",
    "value": 11.61,
  },
  {
    "date": "2026-01-12T00:00:00.000Z",
    "value": 11.62,
  },
  {
    "date": "2026-01-13T00:00:00.000Z",
    "value": 11.63,
  },
  {
    "date": "2026-01-14T00:00:00.000Z",
    "value": 11.65,
  },
  {
    "date": "2026-01-15T00:00:00.000Z",
    "value": 11.66,
  },
  {
    "date": "2026-01-16T00:00:00.000Z",
    "value": 11.64,
  },
  {
    "date": "2026-01-17T00:00:00.000Z",
    "value": 11.58,
  },
  {
    "date": "2026-01-18T00:00:00.000Z",
    "value": 11.53,
  },
  {
    "date": "2026-01-19T00:00:00.000Z",
    "value": 11.47,
  },
  {
    "date": "2026-01-20T00:00:00.000Z",
    "value": 11.41,
  },
  {
    "date": "2026-01-21T00:00:00.000Z",
    "value": 11.35,
  },
  {
    "date": "2026-01-22T00:00:00.000Z",
    "value": 11.3,
  },
  {
    "date": "2026-01-23T00:00:00.000Z",
    "value": 11.24,
  },
  {
    "date": "2026-01-24T00:00:00.000Z",
    "value": 11.18,
  },
  {
    "date": "2026-01-25T00:00:00.000Z",
    "value": 11.13,
  },
  {
    "date": "2026-01-26T00:00:00.000Z",
    "value": 11.07,
  },
  {
    "date": "2026-01-27T00:00:00.000Z",
    "value": 11.01,
  },
  {
    "date": "2026-01-28T00:00:00.000Z",
    "value": 10.95,
  },
  {
    "date": "2026-01-29T00:00:00.000Z",
    "value": 10.9,
  },
  {
    "date": "2026-01-30T00:00:00.000Z",
    "value": 10.84,
  },
  {
    "date": "2026-01-31T00:00:00.000Z",
    "value": 10.78,
  },
  {
    "date": "2026-02-01T00:00:00.000Z",
    "value": 10.72,
  },
  {
    "date": "2026-02-02T00:00:00.000Z",
    "value": 10.67,
  },
  {
    "date": "2026-02-03T00:00:00.000Z",
    "value": 10.61,
  },
  {
    "date": "2026-02-04T00:00:00.000Z",
    "value": 10.55,
  },
  {
    "date": "2026-02-05T00:00:00.000Z",
    "value": 10.5,
  },
  {
    "date": "2026-02-06T00:00:00.000Z",
    "value": 10.44,
  },
  {
    "date": "2026-02-07T00:00:00.000Z",
    "value": 10.38,
  },
  {
    "date": "2026-02-08T00:00:00.000Z",
    "value": 10.32,
  },
  {
    "date": "2026-02-09T00:00:00.000Z",
    "value": 10.27,
  },
  {
    "date": "2026-02-10T00:00:00.000Z",
    "value": 10.21,
  },
  {
    "date": "2026-02-11T00:00:00.000Z",
    "value": 10.15,
  },
  {
    "date": "2026-02-12T00:00:00.000Z",
    "value": 10.09,
  },
  {
    "date": "2026-02-13T00:00:00.000Z",
    "value": 10.04,
  },
  {
    "date": "2026-02-14T00:00:00.000Z",
    "value": 9.98,
  },
  {
    "date": "2026-02-15T00:00:00.000Z",
    "value": 9.87,
  },
  {
    "date": "2026-02-16T00:00:00.000Z",
    "value": 9.76,
  },
  {
    "date": "2026-02-17T00:00:00.000Z",
    "value": 9.65,
  },
  {
    "date": "2026-02-18T00:00:00.000Z",
    "value": 9.54,
  },
  {
    "date": "2026-02-19T00:00:00.000Z",
    "value": 9.43,
  },
  {
    "date": "2026-02-20T00:00:00.000Z",
    "value": 9.31,
  },
  {
    "date": "2026-02-21T00:00:00.000Z",
    "value": 9.2,
  },
  {
    "date": "2026-02-22T00:00:00.000Z",
    "value": 9.09,
  },
  {
    "date": "2026-02-23T00:00:00.000Z",
    "value": 8.98,
  },
  {
    "date": "2026-02-24T00:00:00.000Z",
    "value": 8.87,
  },
  {
    "date": "2026-02-25T00:00:00.000Z",
    "value": 8.76,
  },
  {
    "date": "2026-02-26T00:00:00.000Z",
    "value": 8.65,
  },
  {
    "date": "2026-02-27T00:00:00.000Z",
    "value": 8.54,
  },
  {
    "date": "2026-02-28T00:00:00.000Z",
    "value": 8.43,
  },
  {
    "date": "2026-03-01T00:00:00.000Z",
    "value": 8.32,
  },
  {
    "date": "2026-03-02T00:00:00.000Z",
    "value": 8.21,
  },
  {
    "date": "2026-03-03T00:00:00.000Z",
    "value": 8.1,
  },
  {
    "date": "2026-03-04T00:00:00.000Z",
    "value": 7.98,
  },
  {
    "date": "2026-03-05T00:00:00.000Z",
    "value": 7.87,
  },
  {
    "date": "2026-03-06T00:00:00.000Z",
    "value": 7.76,
  },
  {
    "date": "2026-03-07T00:00:00.000Z",
    "value": 7.65,
  },
  {
    "date": "2026-03-08T00:00:00.000Z",
    "value": 7.54,
  },
  {
    "date": "2026-03-09T00:00:00.000Z",
    "value": 7.43,
  },
  {
    "date": "2026-03-10T00:00:00.000Z",
    "value": 7.32,
  },
  {
    "date": "2026-03-11T00:00:00.000Z",
    "value": 7.21,
  },
  {
    "date": "2026-03-12T00:00:00.000Z",
    "value": 7.1,
  },
  {
    "date": "2026-03-13T00:00:00.000Z",
    "value": 6.99,
  },
  {
    "date": "2026-03-14T00:00:00.000Z",
    "value": 6.88,
  },
  {
    "date": "2026-03-15T00:00:00.000Z",
    "value": 6.77,
  },
  {
    "date": "2026-03-16T00:00:00.000Z",
    "value": 6.66,
  },
  {
    "date": "2026-03-17T00:00:00.000Z",
    "value": 6.56,
  },
  {
    "date": "2026-03-18T00:00:00.000Z",
    "value": 6.46,
  },
  {
    "date": "2026-03-19T00:00:00.000Z",
    "value": 6.36,
  },
  {
    "date": "2026-03-20T00:00:00.000Z",
    "value": 6.26,
  },
  {
    "date": "2026-03-21T00:00:00.000Z",
    "value": 6.16,
  },
  {
    "date": "2026-03-22T00:00:00.000Z",
    "value": 6.06,
  },
  {
    "date": "2026-03-23T00:00:00.000Z",
    "value": 5.96,
  },
  {
    "date": "2026-03-24T00:00:00.000Z",
    "value": 5.85,
  },
  {
    "date": "2026-03-25T00:00:00.000Z",
    "value": 5.75,
  },
  {
    "date": "2026-03-26T00:00:00.000Z",
    "value": 5.65,
  },
  {
    "date": "2026-03-27T00:00:00.000Z",
    "value": 5.55,
  },
  {
    "date": "2026-03-28T00:00:00.000Z",
    "value": 5.45,
  },
  {
    "date": "2026-03-29T00:00:00.000Z",
    "value": 5.35,
  },
  {
    "date": "2026-03-30T00:00:00.000Z",
    "value": 5.25,
  },
  {
    "date": "2026-03-31T00:00:00.000Z",
    "value": 5.15,
  },
  {
    "date": "2026-04-01T00:00:00.000Z",
    "value": 5.05,
  },
  {
    "date": "2026-04-02T00:00:00.000Z",
    "value": 4.95,
  },
  {
    "date": "2026-04-03T00:00:00.000Z",
    "value": 4.85,
  },
  {
    "date": "2026-04-04T00:00:00.000Z",
    "value": 4.75,
  },
  {
    "date": "2026-04-05T00:00:00.000Z",
    "value": 4.65,
  },
  {
    "date": "2026-04-06T00:00:00.000Z",
    "value": 4.55,
  },
  {
    "date": "2026-04-07T00:00:00.000Z",
    "value": 4.45,
  },
  {
    "date": "2026-04-08T00:00:00.000Z",
    "value": 4.34,
  },
  {
    "date": "2026-04-09T00:00:00.000Z",
    "value": 4.24,
  },
  {
    "date": "2026-04-10T00:00:00.000Z",
    "value": 4.14,
  },
  {
    "date": "2026-04-11T00:00:00.000Z",
    "value": 4.04,
  },
  {
    "date": "2026-04-12T00:00:00.000Z",
    "value": 3.94,
  },
  {
    "date": "2026-04-13T00:00:00.000Z",
    "value": 3.84,
  },
  {
    "date": "2026-04-14T00:00:00.000Z",
    "value": 3.74,
  },
  {
    "date": "2026-04-15T00:00:00.000Z",
    "value": 3.64,
  },
  {
    "date": "2026-04-16T00:00:00.000Z",
    "value": 3.58,
  },
  {
    "date": "2026-04-17T00:00:00.000Z",
    "value": 3.51,
  },
  {
    "date": "2026-04-18T00:00:00.000Z",
    "value": 3.45,
  },
  {
    "date": "2026-04-19T00:00:00.000Z",
    "value": 3.38,
  },
  {
    "date": "2026-04-20T00:00:00.000Z",
    "value": 3.32,
  },
  {
    "date": "2026-04-21T00:00:00.000Z",
    "value": 3.26,
  },
  {
    "date": "2026-04-22T00:00:00.000Z",
    "value": 3.19,
  },
  {
    "date": "2026-04-23T00:00:00.000Z",
    "value": 3.13,
  },
  {
    "date": "2026-04-24T00:00:00.000Z",
    "value": 3.06,
  },
  {
    "date": "2026-04-25T00:00:00.000Z",
    "value": 3,
  },
  {
    "date": "2026-04-26T00:00:00.000Z",
    "value": 2.94,
  },
  {
    "date": "2026-04-27T00:00:00.000Z",
    "value": 2.87,
  },
  {
    "date": "2026-04-28T00:00:00.000Z",
    "value": 2.81,
  },
  {
    "date": "2026-04-29T00:00:00.000Z",
    "value": 2.74,
  },
  {
    "date": "2026-04-30T00:00:00.000Z",
    "value": 2.68,
  },
  {
    "date": "2026-05-01T00:00:00.000Z",
    "value": 2.62,
  },
  {
    "date": "2026-05-02T00:00:00.000Z",
    "value": 2.55,
  },
  {
    "date": "2026-05-03T00:00:00.000Z",
    "value": 2.49,
  },
  {
    "date": "2026-05-04T00:00:00.000Z",
    "value": 2.43,
  },
  {
    "date": "2026-05-05T00:00:00.000Z",
    "value": 2.36,
  },
  {
    "date": "2026-05-06T00:00:00.000Z",
    "value": 2.3,
  },
  {
    "date": "2026-05-07T00:00:00.000Z",
    "value": 2.23,
  },
  {
    "date": "2026-05-08T00:00:00.000Z",
    "value": 2.17,
  },
  {
    "date": "2026-05-09T00:00:00.000Z",
    "value": 2.11,
  },
  {
    "date": "2026-05-10T00:00:00.000Z",
    "value": 2.04,
  },
  {
    "date": "2026-05-11T00:00:00.000Z",
    "value": 1.98,
  },
  {
    "date": "2026-05-12T00:00:00.000Z",
    "value": 1.91,
  },
  {
    "date": "2026-05-13T00:00:00.000Z",
    "value": 1.85,
  },
  {
    "date": "2026-05-14T00:00:00.000Z",
    "value": 1.79,
  },
  {
    "date": "2026-05-15T00:00:00.000Z",
    "value": 1.72,
  },
  {
    "date": "2026-05-16T00:00:00.000Z",
    "value": 1.68,
  },
  {
    "date": "2026-05-17T00:00:00.000Z",
    "value": 1.66,
  },
  {
    "date": "2026-05-18T00:00:00.000Z",
    "value": 1.64,
  },
  {
    "date": "2026-05-19T00:00:00.000Z",
    "value": 1.63,
  },
  {
    "date": "2026-05-20T00:00:00.000Z",
    "value": 1.61,
  },
  {
    "date": "2026-05-21T00:00:00.000Z",
    "value": 1.59,
  },
  {
    "date": "2026-05-22T00:00:00.000Z",
    "value": 1.57,
  },
  {
    "date": "2026-05-23T00:00:00.000Z",
    "value": 1.55,
  },
  {
    "date": "2026-05-24T00:00:00.000Z",
    "value": 1.53,
  },
  {
    "date": "2026-05-25T00:00:00.000Z",
    "value": 1.52,
  },
  {
    "date": "2026-05-26T00:00:00.000Z",
    "value": 1.5,
  },
  {
    "date": "2026-05-27T00:00:00.000Z",
    "value": 1.48,
  },
  {
    "date": "2026-05-28T00:00:00.000Z",
    "value": 1.46,
  },
  {
    "date": "2026-05-29T00:00:00.000Z",
    "value": 1.44,
  },
  {
    "date": "2026-05-30T00:00:00.000Z",
    "value": 1.42,
  },
  {
    "date": "2026-05-31T00:00:00.000Z",
    "value": 1.41,
  },
  {
    "date": "2026-06-01T00:00:00.000Z",
    "value": 1.39,
  },
  {
    "date": "2026-06-02T00:00:00.000Z",
    "value": 1.37,
  },
  {
    "date": "2026-06-03T00:00:00.000Z",
    "value": 1.35,
  },
  {
    "date": "2026-06-04T00:00:00.000Z",
    "value": 1.33,
  },
  {
    "date": "2026-06-05T00:00:00.000Z",
    "value": 1.31,
  },
  {
    "date": "2026-06-06T00:00:00.000Z",
    "value": 1.3,
  },
  {
    "date": "2026-06-07T00:00:00.000Z",
    "value": 1.28,
  },
  {
    "date": "2026-06-08T00:00:00.000Z",
    "value": 1.26,
  },
  {
    "date": "2026-06-09T00:00:00.000Z",
    "value": 1.24,
  },
  {
    "date": "2026-06-10T00:00:00.000Z",
    "value": 1.22,
  },
  {
    "date": "2026-06-11T00:00:00.000Z",
    "value": 1.2,
  },
  {
    "date": "2026-06-12T00:00:00.000Z",
    "value": 1.19,
  },
  {
    "date": "2026-06-13T00:00:00.000Z",
    "value": 1.17,
  },
  {
    "date": "2026-06-14T00:00:00.000Z",
    "value": 1.15,
  },
]
`;

exports[`places 365 > London 1`] = `
[
  {
    "date": "2025-06-15T00:00:00.000Z",
    "value": 6.96,
  },
  {
    "date": "2025-06-16T00:00:00.000Z",
    "value": 6.96,
  },
  {
    "date": "2025-06-17T00:00:00.000Z",
    "value": 6.97,
  },
  {
    "date": "2025-06-18T00:00:00.000Z",
    "value": 6.97,
  },
  {
    "date": "2025-06-19T00:00:00.000Z",
    "value": 6.98,
  },
  {
    "date": "2025-06-20T00:00:00.000Z",
    "value": 6.98,
  },
  {
    "date": "2025-06-21T00:00:00.000Z",
    "value": 6.99,
  },
  {
    "date": "2025-06-22T00:00:00.000Z",
    "value": 6.99,
  },
  {
    "date": "2025-06-23T00:00:00.000Z",
    "value": 6.99,
  },
  {
    "date": "2025-06-24T00:00:00.000Z",
    "value": 7,
  },
  {
    "date": "2025-06-25T00:00:00.000Z",
    "value": 7,
  },
  {
    "date": "2025-06-26T00:00:00.000Z",
    "value": 7.01,
  },
  {
    "date": "2025-06-27T00:00:00.000Z",
    "value": 7.01,
  },
  {
    "date": "2025-06-28T00:00:00.000Z",
    "value": 7.02,
  },
  {
    "date": "2025-06-29T00:00:00.000Z",
    "value": 7.02,
  },
  {
    "date": "2025-06-30T00:00:00.000Z",
    "value": 7.02,
  },
  {
    "date": "2025-07-01T00:00:00.000Z",
    "value": 7.03,
  },
  {
    "date": "2025-07-02T00:00:00.000Z",
    "value": 7.03,
  },
  {
    "date": "2025-07-03T00:00:00.000Z",
    "value": 7.04,
  },
  {
    "date": "2025-07-04T00:00:00.000Z",
    "value": 7.04,
  },
  {
    "date": "2025-07-05T00:00:00.000Z",
    "value": 7.05,
  },
  {
    "date": "2025-07-06T00:00:00.000Z",
    "value": 7.05,
  },
  {
    "date": "2025-07-07T00:00:00.000Z",
    "value": 7.05,
  },
  {
    "date": "2025-07-08T00:00:00.000Z",
    "value": 7.06,
  },
  {
    "date": "2025-07-09T00:00:00.000Z",
    "value": 7.06,
  },
  {
    "date": "2025-07-10T00:00:00.000Z",
    "value": 7.07,
  },
  {
    "date": "2025-07-11T00:00:00.000Z",
    "value": 7.07,
  },
  {
    "date": "2025-07-12T00:00:00.000Z",
    "value": 7.08,
  },
  {
    "date": "2025-07-13T00:00:00.000Z",
    "value": 7.08,
  },
  {
    "date": "2025-07-14T00:00:00.000Z",
    "value": 7.08,
  },
  {
    "date": "2025-07-15T00:00:00.000Z",
    "value": 7.09,
  },
  {
    "date": "2025-07-16T00:00:00.000Z",
    "value": 7.07,
  },
  {
    "date": "2025-07-17T00:00:00.000Z",
    "value": 7.04,
  },
  {
    "date": "2025-07-18T00:00:00.000Z",
    "value": 7,
  },
  {
    "date": "2025-07-19T00:00:00.000Z",
    "value": 6.97,
  },
  {
    "date": "2025-07-20T00:00:00.000Z",
    "value": 6.93,
  },
  {
    "date": "2025-07-21T00:00:00.000Z",
    "value": 6.9,
  },
  {
    "date": "2025-07-22T00:00:00.000Z",
    "value": 6.87,
  },
  {
    "date": "2025-07-23T00:00:00.000Z",
    "value": 6.83,
  },
  {
    "date": "2025-07-24T00:00:00.000Z",
    "value": 6.8,
  },
  {
    "date": "2025-07-25T00:00:00.000Z",
    "value": 6.76,
  },
  {
    "date": "2025-07-26T00:00:00.000Z",
    "value": 6.73,
  },
  {
    "date": "2025-07-27T00:00:00.000Z",
    "value": 6.69,
  },
  {
    "date": "2025-07-28T00:00:00.000Z",
    "value": 6.66,
  },
  {
    "date": "2025-07-29T00:00:00.000Z",
    "value": 6.62,
  },
  {
    "date": "2025-07-30T00:00:00.000Z",
    "value": 6.59,
  },
  {
    "date": "2025-07-31T00:00:00.000Z",
    "value": 6.56,
  },
  {
    "date": "2025-08-01T00:00:00.000Z",
    "value": 6.52,
  },
  {
    "date": "2025-08-02T00:00:00.000Z",
    "value": 6.49,
  },
  {
    "date": "2025-08-03T00:00:00.000Z",
    "value": 6.45,
  },
  {
    "date": "2025-08-04T00:00:00.000Z",
    "value": 6.42,
  },
  {
    "date": "2025-08-05T00:00:00.000Z",
    "value": 6.38,
  },
  {
    "date": "2025-08-06T00:00:00.000Z",
    "value": 6.35,
  },
  {
    "date": "2025-08-07T00:00:00.000Z",
    "value": 6.31,
  },
  {
    "date": "2025-08-08T00:00:00.000Z",
    "value": 6.28,
  },
  {
    "date": "2025-08-09T00:00:00.000Z",
    "value": 6.24,
  },
  {
    "date": "2025-08-10T00:00:00.000Z",
    "value": 6.21,
  },
  {
    "date": "2025-08-11T00:00:00.000Z",
    "value": 6.18,
  },
  {
    "date": "2025-08-12T00:00:00.000Z",
    "value": 6.14,
  },
  {
    "date": "2025-08-13T00:00:00.000Z",
    "value": 6.11,
  },
  {
    "date": "2025-08-14T00:00:00.000Z",
    "value": 6.07,
  },
  {
    "date": "2025-08-15T00:00:00.000Z",
    "value": 6.04,
  },
  {
    "date": "2025-08-16T00:00:00.000Z",
    "value": 5.98,
  },
  {
    "date": "2025-08-17T00:00:00.000Z",
    "value": 5.91,
  },
  {
    "date": "2025-08-18T00:00:00.000Z",
    "value": 5.83,
  },
  {
    "date": "2025-08-19T00:00:00.000Z",
    "value": 5.76,
  },
  {
    "date": "2025-08-20T00:00:00.000Z",
    "value": 5.69,
  },
  {
    "date": "2025-08-21T00:00:00.000Z",
    "value": 5.61,
  },
  {
    "date": "2025-08-22T00:00:00.000Z",
    "value": 5.54,
  },
  {
    "date": "2025-08-23T00:00:00.000Z",
    "value": 5.46,
  },
  {
    "date": "2025-08-24T00:00:00.000Z",
    "value": 5.39,
  },
  {
    "date": "2025-08-25T00:00:00.000Z",
    "value": 5.32,
  },
  {
    "date": "2025-08-26T00:00:00.000Z",
    "value": 5.24,
  },
  {
    "date": "2025-08-27T00:00:00.000Z",
    "value": 5.17,
  },
  {
    "date": "2025-08-28T00:00:00.000Z",
    "value": 5.09,
  },
  {
    "date": "2025-08-29T00:00:00.000Z",
    "value": 5.02,
  },
  {
    "date": "2025-08-30T00:00:00.000Z",
    "value": 4.95,
  },
  {
    "date": "2025-08-31T00:00:00.000Z",
    "value": 4.87,
  },
  {
    "date": "2025-09-01T00:00:00.000Z",
    "value": 4.8,
  },
  {
    "date": "2025-09-02T00:00:00.000Z",
    "value": 4.72,
  },
  {
    "date": "2025-09-03T00:00:00.000Z",
    "value": 4.65,
  },
  {
    "date": "2025-09-04T00:00:00.000Z",
    "value": 4.58,
  },
  {
    "date": "2025-09-05T00:00:00.000Z",
    "value": 4.5,
  },
  {
    "date": "2025-09-06T00:00:00.000Z",
    "value": 4.43,
  },
  {
    "date": "2025-09-07T00:00:00.000Z",
    "value": 4.35,
  },
  {
    "date": "2025-09-08T00:00:00.000Z",
    "value": 4.28,
  },
  {
    "date": "2025-09-09T00:00:00.000Z",
    "value": 4.2,
  },
  {
    "date": "2025-09-10T00:00:00.000Z",
    "value": 4.13,
  },
  {
    "date": "2025-09-11T00:00:00.000Z",
    "value": 4.06,
  },
  {
    "date": "2025-09-12T00:00:00.000Z",
    "value": 3.98,
  },
  {
    "date": "2025-09-13T00:00:00.000Z",
    "value": 3.91,
  },
  {
    "date": "2025-09-14T00:00:00.000Z",
    "value": 3.83,
  },
  {
    "date": "2025-09-15T00:00:00.000Z",
    "value": 3.76,
  },
  {
    "date": "2025-09-16T00:00:00.000Z",
    "value": 3.69,
  },
  {
    "date": "2025-09-17T00:00:00.000Z",
    "value": 3.63,
  },
  {
    "date": "2025-09-18T00:00:00.000Z",
    "value": 3.56,
  },
  {
    "date": "2025-09-19T00:00:00.000Z",
    "value": 3.5,
  },
  {
    "date": "2025-09-20T00:00:00.000Z",
    "value": 3.43,
  },
  {
    "date": "2025-09-21T00:00:00.000Z",
    "value": 3.37,
  },
  {
    "date": "2025-09-22T00:00:00.000Z",
    "value": 3.3,
  },
  {
    "date": "2025-09-23T00:00:00.000Z",
    "value": 3.24,
  },
  {
    "date": "2025-09-24T00:00:00.000Z",
    "value": 3.17,
  },
  {
    "date": "2025-09-25T00:00:00.000Z",
    "value": 3.1,
  },
  {
    "date": "2025-09-26T00:00:00.000Z",
    "value": 3.04,
  },
  {
    "date": "2025-09-27T00:00:00.000Z",
    "value": 2.97,
  },
  {
    "date": "2025-09-28T00:00:00.000Z",
    "value": 2.91,
  },
  {
    "date": "2025-09-29T00:00:00.000Z",
    "value": 2.84,
  },
  {
    "date": "2025-09-30T00:00:00.000Z",
    "value": 2.78,
  },
  {
    "date": "2025-10-01T00:00:00.000Z",
    "value": 2.71,
  },
  {
    "date": "2025-10-02T00:00:00.000Z",
    "value": 2.65,
  },
  {
    "date": "2025-10-03T00:00:00.000Z",
    "value": 2.58,
  },
  {
    "date": "2025-10-04T00:00:00.000Z",
    "value": 2.51,
  },
  {
    "date": "2025-10-05T00:00:00.000Z",
    "value": 2.45,
  },
  {
    "date": "2025-10-06T00:00:00.000Z",
    "value": 2.38,
  },
  {
    "date": "2025-10-07T00:00:00.000Z",
    "value": 2.32,
  },
  {
    "date": "2025-10-08T00:00:00.000Z",
    "value": 2.25,
  },
  {
    "date": "2025-10-09T00:00:00.000Z",
    "value": 2.19,
  },
  {
    "date": "2025-10-10T00:00:00.000Z",
    "value": 2.12,
  },
  {
    "date": "2025-10-11T00:00:00.000Z",
    "value": 2.06,
  },
  {
    "date": "2025-10-12T00:00:00.000Z",
    "value": 1.99,
  },
  {
    "date": "2025-10-13T00:00:00.000Z",
    "value": 1.92,
  },
  {
    "date": "2025-10-14T00:00:00.000Z",
    "value": 1.86,
  },
  {
    "date": "2025-10-15T00:00:00.000Z",
    "value": 1.79,
  },
  {
    "date": "2025-10-16T00:00:00.000Z",
    "value": 1.74,
  },
  {
    "date": "2025-10-17T00:00:00.000Z",
    "value": 1.71,
  },
  {
    "date": "2025-10-18T00:00:00.000Z",
    "value": 1.67,
  },
  {
    "date": "2025-10-19T00:00:00.000Z",
    "value": 1.64,
  },
  {
    "date": "2025-10-20T00:00:00.000Z",
    "value": 1.6,
  },
  {
    "date": "2025-10-21T00:00:00.000Z",
    "value": 1.57,
  },
  {
    "date": "2025-10-22T00:00:00.000Z",
    "value": 1.53,
  },
  {
    "date": "2025-10-23T00:00:00.000Z",
    "value": 1.5,
  },
  {
    "date": "2025-10-24T00:00:00.000Z",
    "value": 1.46,
  },
  {
    "date": "2025-10-25T00:00:00.000Z",
    "value": 1.43,
  },
  {
    "date": "2025-10-26T00:00:00.000Z",
    "value": 1.39,
  },
  {
    "date": "2025-10-27T00:00:00.000Z",
    "value": 1.36,
  },
  {
    "date": "2025-10-28T00:00:00.000Z",
    "value": 1.32,
  },
  {
    "date": "2025-10-29T00:00:00.000Z",
    "value": 1.29,
  },
  {
    "date": "2025-10-30T00:00:00.000Z",
    "value": 1.25,
  },
  {
    "date": "2025-10-31T00:00:00.000Z",
    "value": 1.22,
  },
  {
    "date": "2025-11-01T00:00:00.000Z",
    "value": 1.18,
  },
  {
    "date": "2025-11-02T00:00:00.000Z",
    "value": 1.15,
  },
  {
    "date": "2025-11-03T00:00:00.000Z",
    "value": 1.11,
  },
  {
    "date": "2025-11-04T00:00:00.000Z",
    "value": 1.08,
  },
  {
    "date": "2025-11-05T00:00:00.000Z",
    "value": 1.04,
  },
  {
    "date": "2025-11-06T00:00:00.000Z",
    "value": 1.01,
  },
  {
    "date": "2025-11-07T00:00:00.000Z",
    "value": 0.97,
  },
  {
    "date": "2025-11-08T00:00:00.000Z",
    "value": 0.94,
  },
  {
    "date": "2025-11-09T00:00:00.000Z",
    "value": 0.9,
  },
  {
    "date": "2025-11-10T00:00:00.000Z",
    "value": 0.87,
  },
  {
    "date": "2025-11-11T00:00:00.000Z",
    "value": 0.83,
  },
  {
    "date": "2025-11-12T00:00:00.000Z",
    "value": 0.8,
  },
  {
    "date": "2025-11-13T00:00:00.000Z",
    "value": 0.76,
  },
  {
    "date": "2025-11-14T00:00:00.000Z",
    "value": 0.73,
  },
  {
    "date": "2025-11-15T00:00:00.000Z",
    "value": 0.69,
  },
  {
    "date": "2025-11-16T00:00:00.000Z",
    "value": 0.68,
  },
  {
    "date": "2025-11-17T00:00:00.000Z",
    "value": 0.67,
  },
  {
    "date": "2025-11-18T00:00:00.000Z",
    "value": 0.66,
  },
  {
    "date": "2025-11-19T00:00:00.000Z",
    "value": 0.65,
  },
  {
    "date": "2025-11-20T00:00:00.000Z",
    "value": 0.64,
  },
  {
    "date": "2025-11-21T00:00:00.000Z",
    "value": 0.63,
  },
  {
    "date": "2025-11-22T00:00:00.000Z",
    "value": 0.62,
  },
  {
    "date": "2025-11-23T00:00:00.000Z",
    "value": 0.61,
  },
  {
    "date": "2025-11-24T00:00:00.000Z",
    "value": 0.6,
  },
  {
    "date": "2025-11-25T00:00:00.000Z",
    "value": 0.59,
  },
  {
    "date": "2025-11-26T00:00:00.000Z",
    "value": 0.58,
  },
  {
    "date": "2025-11-27T00:00:00.000Z",
    "value": 0.57,
  },
  {
    "date": "2025-11-28T00:00:00.000Z",
    "value": 0.56,
  },
  {
    "date": "2025-11-29T00:00:00.000Z",
    "value": 0.55,
  },
  {
    "date": "2025-11-30T00:00:00.000Z",
    "value": 0.54,
  },
  {
    "date": "2025-12-01T00:00:00.000Z",
    "value": 0.53,
  },
  {
    "date": "2025-12-02T00:00:00.000Z",
    "value": 0.52,
  },
  {
    "date": "2025-12-03T00:00:00.000Z",
    "value": 0.51,
  },
  {
    "date": "2025-12-04T00:00:00.000Z",
    "value": 0.5,
  },
  {
    "date": "2025-12-05T00:00:00.000Z",
    "value": 0.49,
  },
  {
    "date": "2025-12-06T00:00:00.000Z",
    "value": 0.48,
  },
  {
    "date": "2025-12-07T00:00:00.000Z",
    "value": 0.47,
  },
  {
    "date": "2025-12-08T00:00:00.000Z",
    "value": 0.46,
  },
  {
    "date": "2025-12-09T00:00:00.000Z",
    "value": 0.45,
  },
  {
    "date": "2025-12-10T00:00:00.000Z",
    "value": 0.44,
  },
  {
    "date": "2025-12-11T00:00:00.000Z",
    "value": 0.43,
  },
  {
    "date": "2025-12-12T00:00:00.000Z",
    "value": 0.42,
  },
  {
    "date": "2025-12-13T00:00:00.000Z",
    "value": 0.41,
  },
  {
    "date": "2025-12-14T00:00:00.000Z",
    "value": 0.4,
  },
  {
    "date": "2025-12-15T00:00:00.000Z",
    "value": 0.39,
  },
  {
    "date": "2025-12-16T00:00:00.000Z",
    "value": 0.38,
  },
  {
    "date": "2025-12-17T00:00:00.000Z",
    "value": 0.39,
  },
  {
    "date": "2025-12-18T00:00:00.000Z",
    "value": 0.39,
  },
  {
    "date": "2025-12-19T00:00:00.000Z",
    "value": 0.39,
  },
  {
    "date": "2025-12-20T00:00:00.000Z",
    "value": 0.4,
  },
  {
    "date": "2025-12-21T00:00:00.000Z",
    "value": 0.4,
  },
  {
    "date": "2025-12-22T00:00:00.000Z",
    "value": 0.41,
  },
  {
    "date": "2025-12-23T00:00:00.000Z",
    "value": 0.41,
  },
  {
    "date": "2025-12-24T00:00:00.000Z",
    "value": 0.41,
  },
  {
    "date": "2025-12-25T00:00:00.000Z",
    "value": 0.42,
  },
  {
    "date": "2025-12-26T00:00:00.000Z",
    "value": 0.42,
  },
  {
    "date": "2025-12-27T00:00:00.000Z",
    "value": 0.42,
  },
  {
    "date": "2025-12-28T00:00:00.000Z",
    "value": 0.43,
  },
  {
    "date": "2025-12-29T00:00:00.000Z",
    "value": 0.43,
  },
  {
    "date": "2025-12-30T00:00:00.000Z",
    "value": 0.44,
  },
  {
    "date": "2025-12-31T00:00:00.000Z",
    "value": 0.44,
  },
  {
    "date": "2026-01-01T00:00:00.000Z",
    "value": 0.44,
  },
  {
    "date": "2026-01-02T00:00:00.000Z",
    "value": 0.45,
  },
  {
    "date": "2026-01-03T00:00:00.000Z",
    "value": 0.45,
  },
  {
    "date": "2026-01-04T00:00:00.000Z",
    "value": 0.46,
  },
  {
    "date": "2026-01-05T00:00:00.000Z",
    "value": 0.46,
  },
  {
    "date": "2026-01-06T00:00:00.000Z",
    "value": 0.46,
  },
  {
    "date": "2026-01-07T00:00:00.000Z",
    "value": 0.47,
  },
  {
    "date": "2026-01-08T00:00:00.000Z",
    "value": 0.47,
  },
  {
    "date": "2026-01-09T00:00:00.000Z",
    "value": 0.47,
  },
  {
    "date": "2026-01-10T00:00:00.000Z",
    "value": 0.48,
  },
  {
    "date": "2026-01-11T00:00:00.000Z",
    "value": 0.48,
  },
  {
    "date": "2026-01-12T00:00:00.000Z",
    "value": 0.49,
  },
  {
    "date": "2026-01-13T00:00:00.000Z",
    "value": 0.49,
  },
  {
    "date": "2026-01-14T00:00:00.000Z",
    "value": 0.49,
  },
  {
    "date": "2026-01-15T00:00:00.000Z",
    "value": 0.5,
  },
  {
    "date": "2026-01-16T00:00:00.000Z",
    "value": 0.51,
  },
  {
    "date": "2026-01-17T00:00:00.000Z",
    "value": 0.53,
  },
  {
    "date": "2026-01-18T00:00:00.000Z",
    "value": 0.55,
  },
  {
    "date": "2026-01-19T00:00:00.000Z",
    "value": 0.57,
  },
  {
    "date": "2026-01-20T00:00:00.000Z",
    "value": 0.59,
  },
  {
    "date": "2026-01-21T00:00:00.000Z",
    "value": 0.61,
  },
  {
    "date": "2026-01-22T00:00:00.000Z",
    "value": 0.63,
  },
  {
    "date": "2026-01-23T00:00:00.000Z",
    "value": 0.64,
  },
  {
    "date": "2026-01-24T00:00:00.000Z",
    "value": 0.66,
  },
  {
    "date": "2026-01-25T00:00:00.000Z",
    "value": 0.68,
  },
  {
    "date": "2026-01-26T00:00:00.000Z",
    "value": 0.7,
  },
  {
    "date": "2026-01-27T00:00:00.000Z",
    "value": 0.72,
  },
  {
    "date": "2026-01-28T00:00:00.000Z",
    "value": 0.74,
  },
  {
    "date": "2026-01-29T00:00:00.000Z",
    "value": 0.76,
  },
  {
    "date": "2026-01-30T00:00:00.000Z",
    "value": 0.78,
  },
  {
    "date": "2026-01-31T00:00:00.000Z",
    "value": 0.8,
  },
  {
    "date": "2026-02-01T00:00:00.000Z",
    "value": 0.82,
  },
  {
    "date": "2026-02-02T00:00:00.000Z",
    "value": 0.84,
  },
  {
    "date": "2026-02-03T00:00:00.000Z",
    "value": 0.86,
  },
  {
    "date": "2026-02-04T00:00:00.000Z",
    "value": 0.88,
  },
  {
    "date": "2026-02-05T00:00:00.000Z",
    "value": 0.9,
  },
  {
    "date": "2026-02-06T00:00:00.000Z",
    "value": 0.92,
  },
  {
    "date": "2026-02-07T00:00:00.000Z",
    "value": 0.93,
  },
  {
    "date": "2026-02-08T00:00:00.000Z",
    "value": 0.95,
  },
  {
    "date": "2026-02-09T00:00:00.000Z",
    "value": 0.97,
  },
  {
    "date": "2026-02-10T00:00:00.000Z",
    "value": 0.99,
  },
  {
    "date": "2026-02-11T00:00:00.000Z",
    "value": 1.01,
  },
  {
    "date": "2026-02-12T00:00:00.000Z",
    "value": 1.03,
  },
  {
    "date": "2026-02-13T00:00:00.000Z",
    "value": 1.05,
  },
  {
    "date": "2026-02-14T00:00:00.000Z",
    "value": 1.07,
  },
  {
    "date": "2026-02-15T00:00:00.000Z",
    "value": 1.11,
  },
  {
    "date": "2026-02-16T00:00:00.000Z",
    "value": 1.16,
  },
  {
    "date": "2026-02-17T00:00:00.000Z",
    "value": 1.2,
  },
  {
    "date": "2026-02-18T00:00:00.000Z",
    "value": 1.25,
  },
  {
    "date": "2026-02-19T00:00:00.000Z",
    "value": 1.29,
  },
  {
    "date": "2026-02-20T00:00:00.000Z",
    "value": 1.34,
  },
  {
    "date": "2026-02-21T00:00:00.000Z",
    "value": 1.38,
  },
  {
    "date": "2026-02-22T00:00:00.000Z",
    "value": 1.43,
  },
  {
    "date": "2026-02-23T00:00:00.000Z",
    "value": 1.47,
  },
  {
    "date": "2026-02-24T00:00:00.000Z",
    "value": 1.51,
  },
  {
    "date": "2026-02-25T00:00:00.000Z",
    "value": 1.56,
  },
  {
    "date": "2026-02-26T00:00:00.000Z",
    "value": 1.6,
  },
  {
    "date": "2026-02-27T00:00:00.000Z",
    "value": 1.65,
  },
  {
    "date": "2026-02-28T00:00:00.000Z",
    "value": 1.69,
  },
  {
    "date": "2026-03-01T00:00:00.000Z",
    "value": 1.74,
  },
  {
    "date": "2026-03-02T00:00:00.000Z",
    "value": 1.78,
  },
  {
    "date": "2026-03-03T00:00:00.000Z",
    "value": 1.82,
  },
  {
    "date": "2026-03-04T00:00:00.000Z",
    "value": 1.87,
  },
  {
    "date": "2026-03-05T00:00:00.000Z",
    "value": 1.91,
  },
  {
    "date": "2026-03-06T00:00:00.000Z",
    "value": 1.96,
  },
  {
    "date": "2026-03-07T00:00:00.000Z",
    "value": 2,
  },
  {
    "date": "2026-03-08T00:00:00.000Z",
    "value": 2.05,
  },
  {
    "date": "2026-03-09T00:00:00.000Z",
    "value": 2.09,
  },
  {
    "date": "2026-03-10T00:00:00.000Z",
    "value": 2.14,
  },
  {
    "date": "2026-03-11T00:00:00.000Z",
    "value": 2.18,
  },
  {
    "date": "2026-03-12T00:00:00.000Z",
    "value": 2.22,
  },
  {
    "date": "2026-03-13T00:00:00.000Z",
    "value": 2.27,
  },
  {
    "date": "2026-03-14T00:00:00.000Z",
    "value": 2.31,
  },
  {
    "date": "2026-03-15T00:00:00.000Z",
    "value": 2.36,
  },
  {
    "date": "2026-03-16T00:00:00.000Z",
    "value": 2.41,
  },
  {
    "date": "2026-03-17T00:00:00.000Z",
    "value": 2.47,
  },
  {
    "date": "2026-03-18T00:00:00.000Z",
    "value": 2.53,
  },
  {
    "date": "2026-03-19T00:00:00.000Z",
    "value": 2.59,
  },
  {
    "date": "2026-03-20T00:00:00.000Z",
    "value": 2.65,
  },
  {
    "date": "2026-03-21T00:00:00.000Z",
    "value": 2.71,
  },
  {
    "date": "2026-03-22T00:00:00.000Z",
    "value": 2.77,
  },
  {
    "date": "2026-03-23T00:00:00.000Z",
    "value": 2.83,
  },
  {
    "date": "2026-03-24T00:00:00.000Z",
    "value": 2.89,
  },
  {
    "date": "2026-03-25T00:00:00.000Z",
    "value": 2.95,
  },
  {
    "date": "2026-03-26T00:00:00.000Z",
    "value": 3.01,
  },
  {
    "date": "2026-03-27T00:00:00.000Z",
    "value": 3.07,
  },
  {
    "date": "2026-03-28T00:00:00.000Z",
    "value": 3.13,
  },
  {
    "date": "2026-03-29T00:00:00.000Z",
    "value": 3.19,
  },
  {
    "date": "2026-03-30T00:00:00.000Z",
    "value": 3.25,
  },
  {
    "date": "2026-03-31T00:00:00.000Z",
    "value": 3.3,
  },
  {
    "date": "2026-04-01T00:00:00.000Z",
    "value": 3.36,
  },
  {
    "date": "2026-04-02T00:00:00.000Z",
    "value": 3.42,
  },
  {
    "date": "2026-04-03T00:00:00.000Z",
    "value": 3.48,
  },
  {
    "date": "2026-04-04T00:00:00.000Z",
    "value": 3.54,
  },
  {
    "date": "2026-04-05T00:00:00.000Z",
    "value": 3.6,
  },
  {
    "date": "2026-04-06T00:00:00.000Z",
    "value": 3.66,
  },
  {
    "date": "2026-04-07T00:00:00.000Z",
    "value": 3.72,
  },
  {
    "date": "2026-04-08T00:00:00.000Z",
    "value": 3.78,
  },
  {
    "date": "2026-04-09T00:00:00.000Z",
    "value": 3.84,
  },
  {
    "date": "2026-04-10T00:00:00.000Z",
    "value": 3.9,
  },
  {
    "date": "2026-04-11T00:00:00.000Z",
    "value": 3.96,
  },
  {
    "date": "2026-04-12T00:00:00.000Z",
    "value": 4.02,
  },
  {
    "date": "2026-04-13T00:00:00.000Z",
    "value": 4.08,
  },
  {
    "date": "2026-04-14T00:00:00.000Z",
    "value": 4.14,
  },
  {
    "date": "2026-04-15T00:00:00.000Z",
    "value": 4.2,
  },
  {
    "date": "2026-04-16T00:00:00.000Z",
    "value": 4.26,
  },
  {
    "date": "2026-04-17T00:00:00.000Z",
    "value": 4.31,
  },
  {
    "date": "2026-04-18T00:00:00.000Z",
    "value": 4.37,
  },
  {
    "date": "2026-04-19T00:00:00.000Z",
    "value": 4.42,
  },
  {
    "date": "2026-04-20T00:00:00.000Z",
    "value": 4.48,
  },
  {
    "date": "2026-04-21T00:00:00.000Z",
    "value": 4.53,
  },
  {
    "date": "2026-04-22T00:00:00.000Z",
    "value": 4.59,
  },
  {
    "date": "2026-04-23T00:00:00.000Z",
    "value": 4.65,
  },
  {
    "date": "2026-04-24T00:00:00.000Z",
    "value": 4.7,
  },
  {
    "date": "2026-04-25T00:00:00.000Z",
    "value": 4.76,
  },
  {
    "date": "2026-04-26T00:00:00.000Z",
    "value": 4.81,
  },
  {
    "date": "2026-04-27T00:00:00.000Z",
    "value": 4.87,
  },
  {
    "date": "2026-04-28T00:00:00.000Z",
    "value": 4.92,
  },
  {
    "date": "2026-04-29T00:00:00.000Z",
    "value": 4.98,
  },
  {
    "date": "2026-04-30T00:00:00.000Z",
    "value": 5.04,
  },
  {
    "date": "2026-05-01T00:00:00.000Z",
    "value": 5.09,
  },
  {
    "date": "2026-05-02T00:00:00.000Z",
    "value": 5.15,
  },
  {
    "date": "2026-05-03T00:00:00.000Z",
    "value": 5.2,
  },
  {
    "date": "2026-05-04T00:00:00.000Z",
    "value": 5.26,
  },
  {
    "date": "2026-05-05T00:00:00.000Z",
    "value": 5.31,
  },
  {
    "date": "2026-05-06T00:00:00.000Z",
    "value": 5.37,
  },
  {
    "date": "2026-05-07T00:00:00.000Z",
    "value": 5.43,
  },
  {
    "date": "2026-05-08T00:00:00.000Z",
    "value": 5.48,
  },
  {
    "date": "2026-05-09T00:00:00.000Z",
    "value": 5.54,
  },
  {
    "date": "2026-05-10T00:00:00.000Z",
    "value": 5.59,
  },
  {
    "date": "2026-05-11T00:00:00.000Z",
    "value": 5.65,
  },
  {
    "date": "2026-05-12T00:00:00.000Z",
    "value": 5.7,
  },
  {
    "date": "2026-05-13T00:00:00.000Z",
    "value": 5.76,
  },
  {
    "date": "2026-05-14T00:00:00.000Z",
    "value": 5.82,
  },
  {
    "date": "2026-05-15T00:00:00.000Z",
    "value": 5.87,
  },
  {
    "date": "2026-05-16T00:00:00.000Z",
    "value": 5.92,
  },
  {
    "date": "2026-05-17T00:00:00.000Z",
    "value": 5.95,
  },
  {
    "date": "2026-05-18T00:00:00.000Z",
    "value": 5.99,
  },
  {
    "date": "2026-05-19T00:00:00.000Z",
    "value": 6.02,
  },
  {
    "date": "2026-05-20T00:00:00.000Z",
    "value": 6.06,
  },
  {
    "date": "2026-05-21T00:00:00.000Z",
    "value": 6.09,
  },
  {
    "date": "2026-05-22T00:00:00.000Z",
    "value": 6.13,
  },
  {
    "date": "2026-05-23T00:00:00.000Z",
    "value": 6.16,
  },
  {
    "date": "2026-05-24T00:00:00.000Z",
    "value": 6.2,
  },
  {
    "date": "2026-05-25T00:00:00.000Z",
    "value": 6.23,
  },
  {
    "date": "2026-05-26T00:00:00.000Z",
    "value": 6.26,
  },
  {
    "date": "2026-05-27T00:00:00.000Z",
    "value": 6.3,
  },
  {
    "date": "2026-05-28T00:00:00.000Z",
    "value": 6.33,
  },
  {
    "date": "2026-05-29T00:00:00.000Z",
    "value": 6.37,
  },
  {
    "date": "2026-05-30T00:00:00.000Z",
    "value": 6.4,
  },
  {
    "date": "2026-05-31T00:00:00.000Z",
    "value": 6.44,
  },
  {
    "date": "2026-06-01T00:00:00.000Z",
    "value": 6.47,
  },
  {
    "date": "2026-06-02T00:00:00.000Z",
    "value": 6.51,
  },
  {
    "date": "2026-06-03T00:00:00.000Z",
    "value": 6.54,
  },
  {
    "date": "2026-06-04T00:00:00.000Z",
    "value": 6.58,
  },
  {
    "date": "2026-06-05T00:00:00.000Z",
    "value": 6.61,
  },
  {
    "date": "2026-06-06T00:00:00.000Z",
    "value": 6.65,
  },
  {
    "date": "2026-06-07T00:00:00.000Z",
    "value": 6.68,
  },
  {
    "date": "2026-06-08T00:00:00.000Z",
    "value": 6.72,
  },
  {
    "date": "2026-06-09T00:00:00.000Z",
    "value": 6.75,
  },
  {
    "date": "2026-06-10T00:00:00.000Z",
    "value": 6.79,
  },
  {
    "date": "2026-06-11T00:00:00.000Z",
    "value": 6.82,
  },
  {
    "date": "2026-06-12T00:00:00.000Z",
    "value": 6.86,
  },
  {
    "date": "2026-06-13T00:00:00.000Z",
    "value": 6.89,
  },
  {
    "date": "2026-06-14T00:00:00.000Z",
    "value": 6.93,
  },
]
`;

exports[`places 365 > Sydney 1`] = `
[
  {
    "date": "2025-06-15T00:00:00.000Z",
    "value": 2.64,
  },
  {
    "date": "2025-06-16T00:00:00.000Z",
    "value": 2.65,
  },
  {
    "date": "2025-06-17T00:00:00.000Z",
    "value": 2.66,
  },
  {
    "date": "2025-06-18T00:00:00.000Z",
    "value": 2.66,
  },
  {
    "date": "2025-06-19T00:00:00.000Z",
    "value": 2.67,
  },
  {
    "date": "2025-06-20T00:00:00.000Z",
    "value": 2.68,
  },
  {
    "date": "2025-06-21T00:00:00.000Z",
    "value": 2.69,
  },
  {
    "date": "2025-06-22T00:00:00.000Z",
    "value": 2.7,
  },
  {
    "date": "2025-06-23T00:00:00.000Z",
    "value": 2.71,
  },
  {
    "date": "2025-06-24T00:00:00.000Z",
    "value": 2.71,
  },
  {
    "date": "2025-06-25T00:00:00.000Z",
    "value": 2.72,
  },
  {
    "date": "2025-06-26T00:00:00.000Z",
    "value": 2.73,
  },
  {
    "date": "2025-06-27T00:00:00.000Z",
    "value": 2.74,
  },
  {
    "date": "2025-06-28T00:00:00.000Z",
    "value": 2.75,
  },
  {
    "date": "2025-06-29T00:00:00.000Z",
    "value": 2.75,
  },
  {
    "date": "2025-06-30T00:00:00.000Z",
    "value": 2.76,
  },
  {
    "date": "2025-07-01T00:00:00.000Z",
    "value": 2.77,
  },
  {
    "date": "2025-07-02T00:00:00.000Z",
    "value": 2.78,
  },
  {
    "date": "2025-07-03T00:00:00.000Z",
    "value": 2.79,
  },
  {
    "date": "2025-07-04T00:00:00.000Z",
    "value": 2.8,
  },
  {
    "date": "2025-07-05T00:00:00.000Z",
    "value": 2.8,
  },
  {
    "date": "2025-07-06T00:00:00.000Z",
    "value": 2.81,
  },
  {
    "date": "2025-07-07T00:00:00.000Z",
    "value": 2.82,
  },
  {
    "date": "2025-07-08T00:00:00.000Z",
    "value": 2.83,
  },
  {
    "date": "2025-07-09T00:00:00.000Z",
    "value": 2.84,
  },
  {
    "date": "2025-07-10T00:00:00.000Z",
    "value": 2.84,
  },
  {
    "date": "2025-07-11T00:00:00.000Z",
    "value": 2.85,
  },
  {
    "date": "2025-07-12T00:00:00.000Z",
    "value": 2.86,
  },
  {
    "date": "2025-07-13T00:00:00.000Z",
    "value": 2.87,
  },
  {
    "date": "2025-07-14T00:00:00.000Z",
    "value": 2.88,
  },
  {
    "date": "2025-07-15T00:00:00.000Z",
    "value": 2.89,
  },
  {
    "date": "2025-07-16T00:00:00.000Z",
    "value": 2.91,
  },
  {
    "date": "2025-07-17T00:00:00.000Z",
    "value": 2.96,
  },
  {
    "date": "2025-07-18T00:00:00.000Z",
    "value": 3,
  },
  {
    "date": "2025-07-19T00:00:00.000Z",
    "value": 3.05,
  },
  {
    "date": "2025-07-20T00:00:00.000Z",
    "value": 3.09,
  },
  {
    "date": "2025-07-21T00:00:00.000Z",
    "value": 3.13,
  },
  {
    "date": "2025-07-22T00:00:00.000Z",
    "value": 3.18,
  },
  {
    "date": "2025-07-23T00:00:00.000Z",
    "value": 3.22,
  },
  {
    "date": "2025-07-24T00:00:00.000Z",
    "value": 3.27,
  },
  {
    "date": "2025-07-25T00:00:00.000Z",
    "value": 3.31,
  },
  {
    "date": "2025-07-26T00:00:00.000Z",
    "value": 3.36,
  },
  {
    "date": "2025-07-27T00:00:00.000Z",
    "value": 3.4,
  },
  {
    "date": "2025-07-28T00:00:00.000Z",
    "value": 3.45,
  },
  {
    "date": "2025-07-29T00:00:00.000Z",
    "value": 3.49,
  },
  {
    "date": "2025-07-30T00:00:00.000Z",
    "value": 3.54,
  },
  {
    "date": "2025-07-31T00:00:00.000Z",
    "value": 3.58,
  },
  {
    "date": "2025-08-01T00:00:00.000Z",
    "value": 3.62,
  },
  {
    "date": "2025-08-02T00:00:00.000Z",
    "value": 3.67,
  },
  {
    "date": "2025-08-03T00:00:00.000Z",
    "value": 3.71,
  },
  {
    "date": "2025-08-04T00:00:00.000Z",
    "value": 3.76,
  },
  {
    "date": "2025-08-05T00:00:00.000Z",
    "value": 3.8,
  },
  {
    "date": "2025-08-06T00:00:00.000Z",
    "value": 3.85,
  },
  {
    "date": "2025-08-07T00:00:00.000Z",
    "value": 3.89,
  },
  {
    "date": "2025-08-08T00:00:00.000Z",
    "value": 3.94,
  },
  {
    "date": "2025-08-09T00:00:00.000Z",
    "value": 3.98,
  },
  {
    "date": "2025-08-10T00:00:00.000Z",
    "value": 4.03,
  },
  {
    "date": "2025-08-11T00:00:00.000Z",
    "value": 4.07,
  },
  {
    "date": "2025-08-12T00:00:00.000Z",
    "value": 4.11,
  },
  {
    "date": "2025-08-13T00:00:00.000Z",
    "value": 4.16,
  },
  {
    "date": "2025-08-14T00:00:00.000Z",
    "value": 4.2,
  },
  {
    "date": "2025-08-15T00:00:00.000Z",
    "value": 4.25,
  },
  {
    "date": "2025-08-16T00:00:00.000Z",
    "value": 4.31,
  },
  {
    "date": "2025-08-17T00:00:00.000Z",
    "value": 4.39,
  },
  {
    "date": "2025-08-18T00:00:00.000Z",
    "value": 4.47,
  },
  {
    "date": "2025-08-19T00:00:00.000Z",
    "value": 4.55,
  },
  {
    "date": "2025-08-20T00:00:00.000Z",
    "value": 4.63,
  },
  {
    "date": "2025-08-21T00:00:00.000Z",
    "value": 4.71,
  },
  {
    "date": "2025-08-22T00:00:00.000Z",
    "value": 4.79,
  },
  {
    "date": "2025-08-23T00:00:00.000Z",
    "value": 4.87,
  },
  {
    "date": "2025-08-24T00:00:00.000Z",
    "value": 4.95,
  },
  {
    "date": "2025-08-25T00:00:00.000Z",
    "value": 5.03,
  },
  {
    "date": "2025-08-26T00:00:00.000Z",
    "value": 5.11,
  },
  {
    "date": "2025-08-27T00:00:00.000Z",
    "value": 5.19,
  },
  {
    "date": "2025-08-28T00:00:00.000Z",
    "value": 5.27,
  },
  {
    "date": "2025-08-29T00:00:00.000Z",
    "value": 5.35,
  },
  {
    "date": "2025-08-30T00:00:00.000Z",
    "value": 5.43,
  },
  {
    "date": "2025-08-31T00:00:00.000Z",
    "value": 5.51,
  },
  {
    "date": "2025-09-01T00:00:00.000Z",
    "value": 5.59,
  },
  {
    "date": "2025-09-02T00:00:00.000Z",
    "value": 5.67,
  },
  {
    "date": "2025-09-03T00:00:00.000Z",
    "value": 5.75,
  },
  {
    "date": "2025-09-04T00:00:00.000Z",
    "value": 5.83,
  },
  {
    "date": "2025-09-05T00:00:00.000Z",
    "value": 5.91,
  },
  {
    "date": "2025-09-06T00:00:00.000Z",
    "value": 5.99,
  },
  {
    "date": "2025-09-07T00:00:00.000Z",
    "value": 6.07,
  },
  {
    "date": "2025-09-08T00:00:00.000Z",
    "value": 6.15,
  },
  {
    "date": "2025-09-09T00:00:00.000Z",
    "value": 6.23,
  },
  {
    "date": "2025-09-10T00:00:00.000Z",
    "value": 6.31,
  },
  {
    "date": "2025-09-11T00:00:00.000Z",
    "value": 6.39,
  },
  {
    "date": "2025-09-12T00:00:00.000Z",
    "value": 6.47,
  },
  {
    "date": "2025-09-13T00:00:00.000Z",
    "value": 6.55,
  },
  {
    "date": "2025-09-14T00:00:00.000Z",
    "value": 6.63,
  },
  {
    "date": "2025-09-15T00:00:00.000Z",
    "value": 6.71,
  },
  {
    "date": "2025-09-16T00:00:00.000Z",
    "value": 6.79,
  },
  {
    "date": "2025-09-17T00:00:00.000Z",
    "value": 6.88,
  },
  {
    "date": "2025-09-18T00:00:00.000Z",
    "value": 6.96,
  },
  {
    "date": "2025-09-19T00:00:00.000Z",
    "value": 7.05,
  },
  {
    "date": "2025-09-20T00:00:00.000Z",
    "value": 7.13,
  },
  {
    "date": "2025-09-21T00:00:00.000Z",
    "value": 7.22,
  },
  {
    "date": "2025-09-22T00:00:00.000Z",
    "value": 7.3,
  },
  {
    "date": "2025-09-23T00:00:00.000Z",
    "value": 7.39,
  },
  {
    "date": "2025-09-24T00:00:00.000Z",
    "value": 7.47,
  },
  {
    "date": "2025-09-25T00:00:00.000Z",
    "value": 7.56,
  },
  {
    "date": "2025-09-26T00:00:00.000Z",
    "value": 7.64,
  },
  {
    "date": "2025-09-27T00:00:00.000Z",
    "value": 7.73,
  },
  {
    "date": "2025-09-28T00:00:00.000Z",
    "value": 7.81,
  },
  {
    "date": "2025-09-29T00:00:00.000Z",
    "value": 7.89,
  },
  {
    "date": "2025-09-30T00:00:00.000Z",
    "value": 7.98,
  },
  {
    "date": "2025-10-01T00:00:00.000Z",
    "value": 8.06,
  },
  {
    "date": "2025-10-02T00:00:00.000Z",
    "value": 8.15,
  },
  {
    "date": "2025-10-03T00:00:00.000Z",
    "value": 8.23,
  },
  {
    "date": "2025-10-04T00:00:00.000Z",
    "value": 8.32,
  },
  {
    "date": "2025-10-05T00:00:00.000Z",
    "value": 8.4,
  },
  {
    "date": "2025-10-06T00:00:00.000Z",
    "value": 8.49,
  },
  {
    "date": "2025-10-07T00:00:00.000Z",
    "value": 8.57,
  },
  {
    "date": "2025-10-08T00:00:00.000Z",
    "value": 8.66,
  },
  {
    "date": "2025-10-09T00:00:00.000Z",
    "value": 8.74,
  },
  {
    "date": "2025-10-10T00:00:00.000Z",
    "value": 8.82,
  },
  {
    "date": "2025-10-11T00:00:00.000Z",
    "value": 8.91,
  },
  {
    "date": "2025-10-12T00:00:00.000Z",
    "value": 8.99,
  },
  {
    "date": "2025-10-13T00:00:00.000Z",
    "value": 9.08,
  },
  {
    "date": "2025-10-14T00:00:00.000Z",
    "value": 9.16,
  },
  {
    "date": "2025-10-15T00:00:00.000Z",
    "value": 9.25,
  },
  {
    "date": "2025-10-16T00:00:00.000Z",
    "value": 9.32,
  },
  {
    "date": "2025-10-17T00:00:00.000Z",
    "value": 9.39,
  },
  {
    "date": "2025-10-18T00:00:00.000Z",
    "value": 9.46,
  },
  {
    "date": "2025-10-19T00:00:00.000Z",
    "value": 9.53,
  },
  {
    "date": "2025-10-20T00:00:00.000Z",
    "value": 9.6,
  },
  {
    "date": "2025-10-21T00:00:00.000Z",
    "value": 9.67,
  },
  {
    "date": "2025-10-22T00:00:00.000Z",
    "value": 9.74,
  },
  {
    "date": "2025-10-23T00:00:00.000Z",
    "value": 9.81,
  },
  {
    "date": "2025-10-24T00:00:00.000Z",
    "value": 9.88,
  },
  {
    "date": "2025-10-25T00:00:00.000Z",
    "value": 9.95,
  },
  {
    "date": "2025-10-26T00:00:00.000Z",
    "value": 10.02,
  },
  {
    "date": "2025-10-27T00:00:00.000Z",
    "value": 10.09,
  },
  {
    "date": "2025-10-28T00:00:00.000Z",
    "value": 10.16,
  },
  {
    "date": "2025-10-29T00:00:00.000Z",
    "value": 10.23,
  },
  {
    "date": "2025-10-30T00:00:00.000Z",
    "value": 10.3,
  },
  {
    "date": "2025-10-31T00:00:00.000Z",
    "value": 10.37,
  },
  {
    "date": "2025-11-01T00:00:00.000Z",
    "value": 10.44,
  },
  {
    "date": "2025-11-02T00:00:00.000Z",
    "value": 10.51,
  },
  {
    "date": "2025-11-03T00:00:00.000Z",
    "value": 10.58,
  },
  {
    "date": "2025-11-04T00:00:00.000Z",
    "value": 10.65,
  },
  {
    "date": "2025-11-05T00:00:00.000Z",
    "value": 10.72,
  },
  {
    "date": "2025-11-06T00:00:00.000Z",
    "value": 10.79,
  },
  {
    "date": "2025-11-07T00:00:00.000Z",
    "value": 10.86,
  },
  {
    "date": "2025-11-08T00:00:00.000Z",
    "value": 10.93,
  },
  {
    "date": "2025-11-09T00:00:00.000Z",
    "value": 11,
  },
  {
    "date": "2025-11-10T00:00:00.000Z",
    "value": 11.07,
  },
  {
    "date": "2025-11-11T00:00:00.000Z",
    "value": 11.14,
  },
  {
    "date": "2025-11-12T00:00:00.000Z",
    "value": 11.21,
  },
  {
    "date": "2025-11-13T00:00:00.000Z",
    "value": 11.28,
  },
  {
    "date": "2025-11-14T00:00:00.000Z",
    "value": 11.35,
  },
  {
    "date": "2025-11-15T00:00:00.000Z",
    "value": 11.42,
  },
  {
    "date": "2025-11-16T00:00:00.000Z",
    "value": 11.47,
  },
  {
    "date": "2025-11-17T00:00:00.000Z",
    "value": 11.53,
  },
  {
    "date": "2025-11-18T00:00:00.000Z",
    "value": 11.58,
  },
  {
    "date": "2025-11-19T00:00:00.000Z",
    "value": 11.63,
  },
  {
    "date": "2025-11-20T00:00:00.000Z",
    "value": 11.69,
  },
  {
    "date": "2025-11-21T00:00:00.000Z",
    "value": 11.74,
  },
  {
    "date": "2025-11-22T00:00:00.000Z",
    "value": 11.79,
  },
  {
    "date": "2025-11-23T00:00:00.000Z",
    "value": 11.85,
  },
  {
    "date": "2025-11-24T00:00:00.000Z",
    "value": 11.9,
  },
  {
    "date": "2025-11-25T00:00:00.000Z",
    "value": 11.95,
  },
  {
    "date": "2025-11-26T00:00:00.000Z",
    "value": 12.01,
  },
  {
    "date": "2025-11-27T00:00:00.000Z",
    "value": 12.06,
  },
  {
    "date": "2025-11-28T00:00:00.000Z",
    "value": 12.11,
  },
  {
    "date": "2025-11-29T00:00:00.000Z",
    "value": 12.17,
  },
  {
    "date": "2025-11-30T00:00:00.000Z",
    "value": 12.22,
  },
  {
    "date": "2025-12-01T00:00:00.000Z",
    "value": 12.28,
  },
  {
    "date": "2025-12-02T00:00:00.000Z",
    "value": 12.33,
  },
  {
    "date": "2025-12-03T00:00:00.000Z",
    "value": 12.38,
  },
  {
    "date": "2025-12-04T00:00:00.000Z",
    "value": 12.44,
  },
  {
    "date": "2025-12-05T00:00:00.000Z",
    "value": 12.49,
  },
  {
    "date": "2025-12-06T00:00:00.000Z",
    "value": 12.54,
  },
  {
    "date": "2025-12-07T00:00:00.000Z",
    "value": 12.6,
  },
  {
    "date": "2025-12-08T00:00:00.000Z",
    "value": 12.65,
  },
  {
    "date": "2025-12-09T00:00:00.000Z",
    "value": 12.7,
  },
  {
    "date": "2025-12-10T00:00:00.000Z",
    "value": 12.76,
  },
  {
    "date": "2025-12-11T00:00:00.000Z",
    "value": 12.81,
  },
  {
    "date": "2025-12-12T00:00:00.000Z",
    "value": 12.86,
  },
  {
    "date": "2025-12-13T00:00:00.000Z",
    "value": 12.92,
  },
  {
    "date": "2025-12-14T00:00:00.000Z",
    "value": 12.97,
  },
  {
    "date": "2025-12-15T00:00:00.000Z",
    "value": 13.02,
  },
  {
    "date": "2025-12-16T00:00:00.000Z",
    "value": 13.06,
  },
  {
    "date": "2025-12-17T00:00:00.000Z",
    "value": 13.08,
  },
  {
    "date": "2025-12-18T00:00:00.000Z",
    "value": 13.11,
  },
  {
    "date": "2025-12-19T00:00:00.000Z",
    "value": 13.13,
  },
  {
    "date": "2025-12-20T00:00:00.000Z",
    "value": 13.15,
  },
  {
    "date": "2025-12-21T00:00:00.000Z",
    "value": 13.17,
  },
  {
    "date": "2025-12-22T00:00:00.000Z",
    "value": 13.19,
  },
  {
    "date": "2025-12-23T00:00:00.000Z",
    "value": 13.22,
  },
  {
    "date": "2025-12-24T00:00:00.000Z",
    "value": 13.24,
  },
  {
    "date": "2025-12-25T00:00:00.000Z",
    "value": 13.26,
  },
  {
    "date": "2025-12-26T00:00:00.000Z",
    "value": 13.28,
  },
  {
    "date": "2025-12-27T00:00:00.000Z",
    "value": 13.31,
  },
  {
    "date": "2025-12-28T00:00:00.000Z",
    "value": 13.33,
  },
  {
    "date": "2025-12-29T00:00:00.000Z",
    "value": 13.35,
  },
  {
    "date": "2025-12-30T00:00:00.000Z",
    "value": 13.37,
  },
  {
    "date": "2025-12-31T00:00:00.000Z",
    "value": 13.4,
  },
  {
    "date": "2026-01-01T00:00:00.000Z",
    "value": 13.42,
  },
  {
    "date": "2026-01-02T00:00:00.000Z",
    "value": 13.44,
  },
  {
    "date": "2026-01-03T00:00:00.000Z",
    "value": 13.46,
  },
  {
    "date": "2026-01-04T00:00:00.000Z",
    "value": 13.48,
  },
  {
    "date": "2026-01-05T00:00:00.000Z",
    "value": 13.51,
  },
  {
    "date": "2026-01-06T00:00:00.000Z",
    "value": 13.53,
  },
  {
    "date": "2026-01-07T00:00:00.000Z",
    "value": 13.55,
  },
  {
    "date": "2026-01-08T00:00:00.000Z",
    "value": 13.57,
  },
  {
    "date": "2026-01-09T00:00:00.000Z",
    "value": 13.6,
  },
  {
    "date": "2026-01-10T00:00:00.000Z",
    "value": 13.62,
  },
  {
    "date": "2026-01-11T00:00:00.000Z",
    "value": 13.64,
  },
  {
    "date": "2026-01-12T00:00:00.000Z",
    "value": 13.66,
  },
  {
    "date": "2026-01-13T00:00:00.000Z",
    "value": 13.68,
  },
  {
    "date": "2026-01-14T00:00:00.000Z",
    "value": 13.71,
  },
  {
    "date": "2026-01-15T00:00:00.000Z",
    "value": 13.73,
  },
  {
    "date": "2026-01-16T00:00:00.000Z",
    "value": 13.72,
  },
  {
    "date": "2026-01-17T00:00:00.000Z",
    "value": 13.67,
  },
  {
    "date": "2026-01-18T00:00:00.000Z",
    "value": 13.63,
  },
  {
    "date": "2026-01-19T00:00:00.000Z",
    "value": 13.58,
  },
  {
    "date": "2026-01-20T00:00:00.000Z",
    "value": 13.54,
  },
  {
    "date": "2026-01-21T00:00:00.000Z",
    "value": 13.49,
  },
  {
    "date": "2026-01-22T00:00:00.000Z",
    "value": 13.45,
  },
  {
    "date": "2026-01-23T00:00:00.000Z",
    "value": 13.4,
  },
  {
    "date": "2026-01-24T00:00:00.000Z",
    "value": 13.36,
  },
  {
    "date": "2026-01-25T00:00:00.000Z",
    "value": 13.31,
  },
  {
    "date": "2026-01-26T00:00:00.000Z",
    "value": 13.27,
  },
  {
    "date": "2026-01-27T00:00:00.000Z",
    "value": 13.23,
  },
  {
    "date": "2026-01-28T00:00:00.000Z",
    "value": 13.18,
  },
  {
    "date": "2026-01-29T00:00:00.000Z",
    "value": 13.14,
  },
  {
    "date": "2026-01-30T00:00:00.000Z",
    "value": 13.09,
  },
  {
    "date": "2026-01-31T00:00:00.000Z",
    "value": 13.05,
  },
  {
    "date": "2026-02-01T00:00:00.000Z",
    "value": 13,
  },
  {
    "date": "2026-02-02T00:00:00.000Z",
    "value": 12.96,
  },
  {
    "date": "2026-02-03T00:00:00.000Z",
    "value": 12.91,
  },
  {
    "date": "2026-02-04T00:00:00.000Z",
    "value": 12.87,
  },
  {
    "date": "2026-02-05T00:00:00.000Z",
    "value": 12.82,
  },
  {
    "date": "2026-02-06T00:00:00.000Z",
    "value": 12.78,
  },
  {
    "date": "2026-02-07T00:00:00.000Z",
    "value": 12.73,
  },
  {
    "date": "2026-02-08T00:00:00.000Z",
    "value": 12.69,
  },
  {
    "date": "2026-02-09T00:00:00.000Z",
    "value": 12.64,
  },
  {
    "date": "2026-02-10T00:00:00.000Z",
    "value": 12.6,
  },
  {
    "date": "2026-02-11T00:00:00.000Z",
    "value": 12.55,
  },
  {
    "date": "2026-02-12T00:00:00.000Z",
    "value": 12.51,
  },
  {
    "date": "2026-02-13T00:00:00.000Z",
    "value": 12.46,
  },
  {
    "date": "2026-02-14T00:00:00.000Z",
    "value": 12.42,
  },
  {
    "date": "2026-02-15T00:00:00.000Z",
    "value": 12.32,
  },
  {
    "date": "2026-02-16T00:00:00.000Z",
    "value": 12.22,
  },
  {
    "date": "2026-02-17T00:00:00.000Z",
    "value": 12.13,
  },
  {
    "date": "2026-02-18T00:00:00.000Z",
    "value": 12.03,
  },
  {
    "date": "2026-02-19T00:00:00.000Z",
    "value": 11.93,
  },
  {
    "date": "2026-02-20T00:00:00.000Z",
    "value": 11.83,
  },
  {
    "date": "2026-02-21T00:00:00.000Z",
    "value": 11.74,
  },
  {
    "date": "2026-02-22T00:00:00.000Z",
    "value": 11.64,
  },
  {
    "date": "2026-02-23T00:00:00.000Z",
    "value": 11.54,
  },
  {
    "date": "2026-02-24T00:00:00.000Z",
    "value": 11.44,
  },
  {
    "date": "2026-02-25T00:00:00.000Z",
    "value": 11.35,
  },
  {
    "date": "2026-02-26T00:00:00.000Z",
    "value": 11.25,
  },
  {
    "date": "2026-02-27T00:00:00.000Z",
    "value": 11.15,
  },
  {
    "date": "2026-02-28T00:00:00.000Z",
    "value": 11.05,
  },
  {
    "date": "2026-03-01T00:00:00.000Z",
    "value": 10.96,
  },
  {
    "date": "2026-03-02T00:00:00.000Z",
    "value": 10.86,
  },
  {
    "date": "2026-03-03T00:00:00.000Z",
    "value": 10.76,
  },
  {
    "date": "2026-03-04T00:00:00.000Z",
    "value": 10.66,
  },
  {
    "date": "2026-03-05T00:00:00.000Z",
    "value": 10.57,
  },
  {
    "date": "2026-03-06T00:00:00.000Z",
    "value": 10.47,
  },
  {
    "date": "2026-03-07T00:00:00.000Z",
    "value": 10.37,
  },
  {
    "date": "2026-03-08T00:00:00.000Z",
    "value": 10.27,
  },
  {
    "date": "2026-03-09T00:00:00.000Z",
    "value": 10.17,
  },
  {
    "date": "2026-03-10T00:00:00.000Z",
    "value": 10.08,
  },
  {
    "date": "2026-03-11T00:00:00.000Z",
    "value": 9.98,
  },
  {
    "date": "2026-03-12T00:00:00.000Z",
    "value": 9.88,
  },
  {
    "date": "2026-03-13T00:00:00.000Z",
    "value": 9.78,
  },
  {
    "date": "2026-03-14T00:00:00.000Z",
    "value": 9.69,
  },
  {
    "date": "2026-03-15T00:00:00.000Z",
    "value": 9.59,
  },
  {
    "date": "2026-03-16T00:00:00.000Z",
    "value": 9.48,
  },
  {
    "date": "2026-03-17T00:00:00.000Z",
    "value": 9.37,
  },
  {
    "date": "2026-03-18T00:00:00.000Z",
    "value": 9.26,
  },
  {
    "date": "2026-03-19T00:00:00.000Z",
    "value": 9.15,
  },
  {
    "date": "2026-03-20T00:00:00.000Z",
    "value": 9.04,
  },
  {
    "date": "2026-03-21T00:00:00.000Z",
    "value": 8.93,
  },
  {
    "date": "2026-03-22T00:00:00.000Z",
    "value": 8.82,
  },
  {
    "date": "2026-03-23T00:00:00.000Z",
    "value": 8.71,
  },
  {
    "date": "2026-03-24T00:00:00.000Z",
    "value": 8.6,
  },
  {
    "date": "2026-03-25T00:00:00.000Z",
    "value": 8.48,
  },
  {
    "date": "2026-03-26T00:00:00.000Z",
    "value": 8.37,
  },
  {
    "date": "2026-03-27T00:00:00.000Z",
    "value": 8.26,
  },
  {
    "date": "2026-03-28T00:00:00.000Z",
    "value": 8.15,
  },
  {
    "date": "2026-03-29T00:00:00.000Z",
    "value": 8.04,
  },
  {
    "date": "2026-03-30T00:00:00.000Z",
    "value": 7.93,
  },
  {
    "date": "2026-03-31T00:00:00.000Z",
    "value": 7.82,
  },
  {
    "date": "2026-04-01T00:00:00.000Z",
    "value": 7.71,
  },
  {
    "date": "2026-04-02T00:00:00.000Z",
    "value": 7.59,
  },
  {
    "date": "2026-04-03T00:00:00.000Z",
    "value": 7.48,
  },
  {
    "date": "2026-04-04T00:00:00.000Z",
    "value": 7.37,
  },
  {
    "date": "2026-04-05T00:00:00.000Z",
    "value": 7.26,
  },
  {
    "date": "2026-04-06T00:00:00.000Z",
    "value": 7.15,
  },
  {
    "date": "2026-04-07T00:00:00.000Z",
    "value": 7.04,
  },
  {
    "date": "2026-04-08T00:00:00.000Z",
    "value": 6.93,
  },
  {
    "date": "2026-04-09T00:00:00.000Z",
    "value": 6.82,
  },
  {
    "date": "2026-04-10T00:00:00.000Z",
    "value": 6.71,
  },
  {
    "date": "2026-04-11T00:00:00.000Z",
    "value": 6.59,
  },
  {
    "date": "2026-04-12T00:00:00.000Z",
    "value": 6.48,
  },
  {
    "date": "2026-04-13T00:00:00.000Z",
    "value": 6.37,
  },
  {
    "date": "2026-04-14T00:00:00.000Z",
    "value": 6.26,
  },
  {
    "date": "2026-04-15T00:00:00.000Z",
    "value": 6.15,
  },
  {
    "date": "2026-04-16T00:00:00.000Z",
    "value": 6.07,
  },
  {
    "date": "2026-04-17T00:00:00.000Z",
    "value": 5.99,
  },
  {
    "date": "2026-04-18T00:00:00.000Z",
    "value": 5.9,
  },
  {
    "date": "2026-04-19T00:00:00.000Z",
    "value": 5.82,
  },
  {
    "date": "2026-04-20T00:00:00.000Z",
    "value": 5.74,
  },
  {
    "date": "2026-04-21T00:00:00.000Z",
    "value": 5.66,
  },
  {
    "date": "2026-04-22T00:00:00.000Z",
    "value": 5.57,
  },
  {
    "date": "2026-04-23T00:00:00.000Z",
    "value": 5.49,
  },
  {
    "date": "2026-04-24T00:00:00.000Z",
    "value": 5.41,
  },
  {
    "date": "2026-04-25T00:00:00.000Z",
    "value": 5.33,
  },
  {
    "date": "2026-04-26T00:00:00.000Z",
    "value": 5.24,
  },
  {
    "date": "2026-04-27T00:00:00.000Z",
    "value": 5.16,
  },
  {
    "date": "2026-04-28T00:00:00.000Z",
    "value": 5.08,
  },
  {
    "date": "2026-04-29T00:00:00.000Z",
    "value": 5,
  },
  {
    "date": "2026-04-30T00:00:00.000Z",
    "value": 4.92,
  },
  {
    "date": "2026-05-01T00:00:00.000Z",
    "value": 4.83,
  },
  {
    "date": "2026-05-02T00:00:00.000Z",
    "value": 4.75,
  },
  {
    "date": "2026-05-03T00:00:00.000Z",
    "value": 4.67,
  },
  {
    "date": "2026-05-04T00:00:00.000Z",
    "value": 4.59,
  },
  {
    "date": "2026-05-05T00:00:00.000Z",
    "value": 4.5,
  },
  {
    "date": "2026-05-06T00:00:00.000Z",
    "value": 4.42,
  },
  {
    "date": "2026-05-07T00:00:00.000Z",
    "value": 4.34,
  },
  {
    "date": "2026-05-08T00:00:00.000Z",
    "value": 4.26,
  },
  {
    "date": "2026-05-09T00:00:00.000Z",
    "value": 4.17,
  },
  {
    "date": "2026-05-10T00:00:00.000Z",
    "value": 4.09,
  },
  {
    "date": "2026-05-11T00:00:00.000Z",
    "value": 4.01,
  },
  {
    "date": "2026-05-12T00:00:00.000Z",
    "value": 3.93,
  },
  {
    "date": "2026-05-13T00:00:00.000Z",
    "value": 3.85,
  },
  {
    "date": "2026-05-14T00:00:00.000Z",
    "value": 3.76,
  },
  {
    "date": "2026-05-15T00:00:00.000Z",
    "value": 3.68,
  },
  {
    "date": "2026-05-16T00:00:00.000Z",
    "value": 3.62,
  },
  {
    "date": "2026-05-17T00:00:00.000Z",
    "value": 3.59,
  },
  {
    "date": "2026-05-18T00:00:00.000Z",
    "value": 3.56,
  },
  {
    "date": "2026-05-19T00:00:00.000Z",
    "value": 3.53,
  },
  {
    "date": "2026-05-20T00:00:00.000Z",
    "value": 3.49,
  },
  {
    "date": "2026-05-21T00:00:00.000Z",
    "value": 3.46,
  },
  {
    "date": "2026-05-22T00:00:00.000Z",
    "value": 3.43,
  },
  {
    "date": "2026-05-23T00:00:00.000Z",
    "value": 3.39,
  },
  {
    "date": "2026-05-24T00:00:00.000Z",
    "value": 3.36,
  },
  {
    "date": "2026-05-25T00:00:00.000Z",
    "value": 3.33,
  },
  {
    "date": "2026-05-26T00:00:00.000Z",
    "value": 3.3,
  },
  {
    "date": "2026-05-27T00:00:00.000Z",
    "value": 3.26,
  },
  {
    "date": "2026-05-28T00:00:00.000Z",
    "value": 3.23,
  },
  {
    "date": "2026-05-29T00:00:00.000Z",
    "value": 3.2,
  },
  {
    "date": "2026-05-30T00:00:00.000Z",
    "value": 3.16,
  },
  {
    "date": "2026-05-31T00:00:00.000Z",
    "value": 3.13,
  },
  {
    "date": "2026-06-01T00:00:00.000Z",
    "value": 3.1,
  },
  {
    "date": "2026-06-02T00:00:00.000Z",
    "value": 3.07,
  },
  {
    "date": "2026-06-03T00:00:00.000Z",
    "value": 3.03,
  },
  {
    "date": "2026-06-04T00:00:00.000Z",
    "value": 3,
  },
  {
    "date": "2026-06-05T00:00:00.000Z",
    "value": 2.97,
  },
  {
    "date": "2026-06-06T00:00:00.000Z",
    "value": 2.94,
  },
  {
    "date": "2026-06-07T00:00:00.000Z",
    "value": 2.9,
  },
  {
    "date": "2026-06-08T00:00:00.000Z",
    "value": 2.87,
  },
  {
    "date": "2026-06-09T00:00:00.000Z",
    "value": 2.84,
  },
  {
    "date": "2026-06-10T00:00:00.000Z",
    "value": 2.8,
  },
  {
    "date": "2026-06-11T00:00:00.000Z",
    "value": 2.77,
  },
  {
    "date": "2026-06-12T00:00:00.000Z",
    "value": 2.74,
  },
  {
    "date": "2026-06-13T00:00:00.000Z",
    "value": 2.71,
  },
  {
    "date": "2026-06-14T00:00:00.000Z",
    "value": 2.67,
  },
]
`;
